--- a/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
@@ -200,3 +200,7 @@
  MEN_communist_party:0 "蒙古人民阵线"
  MEA_socialist_party:0 "内蒙古人民革命党“达斡尔派”"
  MEA_communist_party:0 "蒙古人民阵线"
+MEN_zedengbaer:0 "尤睦佳·泽登巴尔"
+MEN_batedaoerji:0 "巴特·道尔吉"
+MEN_zhamiyang:0 "扎米扬·勒哈格瓦苏伦"
+MEN_gonggeer:0 "沙格达林·贡戈尔"
