--- a/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
@@ -5,13 +5,13 @@
  XIN_Sheng_Shicai_desc:0 "在每个人的内心深处，都会藏着一个梦想——是在现实中几乎无法触碰的、纯粹由狂热的信念和欲望钩织起的彼岸。对于盛世才而言，那个梦想，就是成为王。\n\n他几乎成功了。梦想得以兑现之处，是孤悬于塞外的新疆。\n\n很难想象一个辽宁人如何能够成为人们口中的“新疆王”，但盛世才凭借着他天生的强运和投机本领做到了。在1933年的风暴中，他驱逐了他的老上司金树仁，成为了新疆的实际统治者。然而，强敌环伺、风雨飘摇，而新疆王的宝座却黯淡无光。马仲英和张培元无时无刻不在觊觎着那个万人之上的尊位，盛世才只能向北寻找援助，并在作出了“亲苏反帝”的承诺后，得到了红军的援助，终于将他命定的土地牢牢抓握在手中。\n\n约定意味着代价。作为成王必须的代偿，盛世才不得不扮作左翼立场接纳从中原而来的共产党人，让他们进入自己的王庭。他始终用疑惑的眼神注视着这群过于活跃的赤化分子，同时沉默地向关内眺望。苏联轰然倒塌、国民政府一败涂地，而日本成为了亚洲新的主人，这一切都被盛世才看在眼里。盛世才要成为的是王，和新疆无关。他根本不在意新疆如何，只想要守护住他的王座。因此，他可以果断地投向日本的怀抱，也可以果断地屠杀共产党人，尽管前者并没有那么喜欢他，而后者曾是他的恩人与助手。\n\n十年时光倏忽逝去。自玉门关外吹来的风越来越强劲地穿越戈壁，吹入迪化的深深王庭，吹拂着王座上的盛世才。新疆王的外壳在人们的议论中一片片地剥去，盛世才终于显现出了他原本的样貌——他只不过是一个可以为了私利而不断投机的军阀，他说谎、屠杀，毫无气节地当了汉奸。盛世才已经没有维护他权力的手段，只能颤抖着、挣扎着等待最终命运的到来。\n\n——王治总有终结的一天，何况本就只是赝品。这一次，盛世才无处告解，也再不会得救了。"
 #Spirit
  The_Crumbling_Six_Policies:0 "摇摇欲坠的六大政策"
- The_Crumbling_Six_Policies_desc:0 "§Y反帝、容日、和平、清廉、建设、民族平等§!，这是盛世才引以为豪的政治发明，也就是所谓的“六大政策”。在1946年将六大政策中的“亲苏”修改为“容日”时，盛世才一再保证，这并不意味着容共的政策会有所改变，也不意味着日本人从此可以左右新疆，然而这两样保证，他一样都没能贯彻。\n50年代，在盛世才的授意下，全疆开始了清共运动，一大批新疆局的干部被捕，包括民政厅厅长毛泽民在内的人士被秘密杀害。随后，新疆经济便陷入了长期紊乱之中，导致盛世才不得不积极地吸引日本人来此投资。因此，全疆上下讥讽他“名为容日，实为通日”的声音随处可闻。§R指引新疆前行的六大政策，已经快要走到生命的尽头。只要有人向它踢上一脚，它便会瞬间土崩瓦解。§!"
+ The_Crumbling_Six_Policies_desc:0 "§Y反帝、容日、和平、清廉、建设、民族平等§!，这是盛世才引以为豪的政治发明，也就是所谓的“六大政策”。在1946年将六大政策中的“亲苏”修改为“容日”时，盛世才一再保证，这并不意味着容共的政策会有所改变，也不意味着日本人从此可以左右新疆，然而这两样保证，他一样都没能贯彻。\n\n50年代，在盛世才的授意下，全疆开始了清共运动，一大批新疆局的干部被捕，包括民政厅厅长毛泽民在内的人士被秘密杀害。随后，新疆经济便陷入了长期紊乱之中，导致盛世才不得不积极地吸引日本人来此投资。因此，全疆上下讥讽他“名为容日，实为通日”的声音随处可闻。§R指引新疆前行的六大政策，已经快要走到生命的尽头。只要有人向它踢上一脚，它便会瞬间土崩瓦解。§!"
  Where_Are_They:0 "他们在哪里？"
- Where_Are_They_desc:0 "在经历了重庆停火后和二次长征之后，中共残部的一部分流向新疆，与以陈潭秋为代表的中共支部和当地原有的社会主义组织汇合。红色力量的不断增长，使得盛世才坐立难安，不得不撕下了“容共”的面具，大肆屠杀——共产党人确实随着屠刀的挥舞消失不见了，可这绝不意味着他们已然灭亡。\n他们在哪里？十年倏尔而逝，新疆的共产党人依旧坚持着他们的斗争。他们行走在北疆的旷野上，出没在全疆各地的村镇与城市的街头巷尾，甚至有可能已经又一次打入了执政府的心脏；§x他们绝不会宽恕，也绝不会忘记。§!"
+ Where_Are_They_desc:0 "在经历了重庆停火后和二次长征之后，中共残部的一部分流向新疆，与以陈潭秋为代表的中共支部和当地原有的社会主义组织汇合。红色力量的不断增长，使得盛世才坐立难安，不得不撕下了“容共”的面具，大肆屠杀——共产党人确实随着屠刀的挥舞消失不见了，可这绝不意味着他们已然灭亡。\n\n他们在哪里？十年倏尔而逝，新疆的共产党人依旧坚持着他们的斗争。他们行走在北疆的旷野上，出没在全疆各地的村镇与城市的街头巷尾，甚至有可能已经又一次打入了执政府的心脏；§x他们绝不会宽恕，也绝不会忘记。§!"
  Aksai_Chin_Issue:0 "阿克赛钦问题"
- Aksai_Chin_Issue_desc:0 "随着英国政府在第二次世界大战中的战败与流亡，失去宗主国保障的英属印度陷入了极大的混乱之中，新疆当局趁机夺回了被侵占已久的北阿克赛钦。但随着时间的推移，治理能力退化的省政府已经无力顾及此地，而新独立的印度共和国，显然对这块“白石滩”耿耿于怀。§Y时至今日，除非省政府能够重整旗鼓，或者另有势力取而代之重新治理，不然，新疆能否继续将这块战略意义重大的山中盆地握在手里，就要打上一个大大的问号了。§!"
+ Aksai_Chin_Issue_desc:0 "随着英国政府在第二次世界大战中的战败与流亡，失去宗主国保障的英属印度陷入了极大的混乱之中，新疆当局趁机夺回了被侵占已久的北阿克赛钦。但随着时间的推移，治理能力退化的省政府已经无力顾及此地，而新独立的印度共和国，显然对这块“白石滩”耿耿于怀。\n\n§Y时至今日，除非省政府能够重整旗鼓，或者另有势力取而代之重新治理，不然，新疆能否继续将这块战略意义重大的山中盆地握在手里，就要打上一个大大的问号了。§!"
  Unfinished_Railways:0 "哈密-阿克苏铁路"
- Unfinished_Railways_desc:0 "东西向穿越新疆省的哈密-阿克苏铁路及其规划，是前民政厅厅长毛泽民为新疆留下的一笔遗产。按照规划，这条铁路将会连接轻纺工业聚集地哈密与棉花产地阿克苏，从而使原料更加高效快捷地流动，但随着毛泽民的身故，铁路的建成工期便无限期地延长了。\n对于新疆当局而言，这条未能完全修成的铁路令他们无所适从：一方面，他们没有能力自主完工，而日本人也对这个项目不感兴趣；另一方面，他们也没有能力维护和运作好现有的线路。§Y在许多人眼中，哈密-阿克苏铁路，就是新疆持续十年经济衰退的缩影。§!"
+ Unfinished_Railways_desc:0 "东西向穿越新疆省的哈密-阿克苏铁路及其规划，是前民政厅厅长毛泽民为新疆留下的一笔遗产。按照规划，这条铁路将会连接轻纺工业聚集地哈密与棉花产地阿克苏，从而使原料更加高效快捷地流动，但随着毛泽民的身故，铁路的建成工期便无限期地延长了。\n\n对于新疆当局而言，这条未能完全修成的铁路令他们无所适从：一方面，他们没有能力自主完工，而日本人也对这个项目不感兴趣；另一方面，他们也没有能力维护和运作好现有的线路。§Y在许多人眼中，哈密-阿克苏铁路，就是新疆持续十年经济衰退的缩影。§!"
 #INTRO_TREE
  XIN_The_New_Year_speech_of_our_Superintendent:0 "盛督理的新年讲话"
  XIN_The_New_Year_speech_of_our_Superintendent_desc:0 ""
@@ -37,7 +37,7 @@
  XIN_Convene_a_so_called_party_congress_desc:0 ""
  XIN_Mend_the_six_policies:0 "缝补六大政策"
  XIN_Mend_the_six_policies_desc:0 ""
- XIN_Abandon_the_six_policies:0 "旧的不去......"
+ XIN_Abandon_the_six_policies:0 "旧的不去……"
  XIN_Abandon_the_six_policies_desc:0 ""
  XIN_Find_new_friends_for_Xinjiang:0 "寻找新朋友"
  XIN_Find_new_friends_for_Xinjiang_desc:0 ""
@@ -53,7 +53,7 @@
  XIN_Our_new_identity_desc:0 ""
  XIN_No_mercy_on_us:0 "无人垂怜"
  XIN_No_mercy_on_us_desc:0 ""
- XIN_At_least_a_real_party:0 "......至少是个党了"
+ XIN_At_least_a_real_party:0 "……至少是个党了"
  XIN_At_least_a_real_party_desc:0 ""
  XIN_Keep_the_fig_leaf:0 "保住遮羞布！"
  XIN_Keep_the_fig_leaf_desc:0 ""
@@ -63,7 +63,7 @@
  XIN_Demolition_of_the_Hami-Aksu_railway_desc:0 ""
  XIN_A_Railway_project_budget:0 "1962年铁路工程预算"
  XIN_A_Railway_project_budget_desc:0 ""
- XIN_Wealth_beneath_the_sand:0 "黄沙下的财富......？"
+ XIN_Wealth_beneath_the_sand:0 "黄沙下的财富……？"
  XIN_Wealth_beneath_the_sand_desc:0 ""
  XIN_Get_something_pretty_good_in_Khotan:0 "去和阗搞点好东西"
  XIN_Get_something_pretty_good_in_Khotan_desc:0 ""
@@ -71,13 +71,13 @@
  XIN_More_Japanese_investment_desc:0 ""
  XIN_Cruise_to_southern_Xinjiang:0 "南疆巡行"
  XIN_Cruise_to_southern_Xinjiang_desc:0 ""
- XIN_Efforts_are_made:0 "我们已作出努力......"
+ XIN_Efforts_are_made:0 "我们已作出努力……"
  XIN_Efforts_are_made_desc:0 ""
- XIN_But_still_not_good_enough:0 "......但仍不够好"
+ XIN_But_still_not_good_enough:0 "……但仍不够好"
  XIN_But_still_not_good_enough_desc:0 ""
  JAP.2022.t:"大日本帝国陆军航空兵第114飞行集团报告大本营"
  JAP.2022.a:"（天皇庇佑，皇国又一次取得了大胜！）"
- JAP.2022.d:"我部按计划于甲二十一空域巡逻，后发现疑似旅级野战指挥设施，我部下属第二轻爆中队于发现后即刻展开攻击，敌始料未及，共使用十一枚五百千克爆弹，二十枚二百五十千克爆弹。攻击效果优异，经多角度多架飞机上的多名机组人员证实，该旅级单位无人生还。\N据友军研究电台波段得知，该指挥部实为“近卫步兵第八十八旅”的指挥核心所在。在之前的蒙古冲突中，该旅级作战单位表现出了高超的作战效率，极为擅长伏击战，游击战等作战形式，惯于袭扰我方补给与辎重，屡次迟滞了蒙疆军的攻势。根据我们的情报，该部队本不属于“人民革命委员会”的作战序列当中。但为何这样善战的一支会突然出现在蒙古战场上？其中种种缘由，仍在调查当中。"
+ JAP.2022.d:"我部按计划于甲二十一空域巡逻，后发现疑似旅级野战指挥设施，我部下属第二轻爆中队于发现后即刻展开攻击，敌始料未及，共使用十一枚五百千克爆弹，二十枚二百五十千克爆弹。攻击效果优异，经多角度多架飞机上的多名机组人员证实，该旅级单位无人生还。\n\n据友军研究电台波段得知，该指挥部实为“近卫步兵第八十八旅”的指挥核心所在。在之前的蒙古冲突中，该旅级作战单位表现出了高超的作战效率，极为擅长伏击战，游击战等作战形式，惯于袭扰我方补给与辎重，屡次迟滞了蒙疆军的攻势。根据我们的情报，该部队本不属于“人民革命委员会”的作战序列当中。但为何这样善战的一支会突然出现在蒙古战场上？其中种种缘由，仍在调查当中。"
 #马家国策
  QIN_1:"大溃退"
  QIN_2:"誓死守卫西宁"
@@ -116,28 +116,28 @@
  GAN_16:"督促小伙子们打起精神"
  GAN_17:"缺衣少食"
  GAN_18:"缺枪少弹"
- GAN_19:"但我们仍要战斗......"
+ GAN_19:"但我们仍要战斗……"
 
 #民族精神
 Ning_Ma:"宁系马家"
 Ning_Ma_desc:"在兰州大败之后，一部分宁夏马系随着我们一起撤往了西宁。尽管青海和宁夏一直自认为同为马家，本应该亲如手足，一同抗日，但现在，由于实力平衡被打破，宁夏马系不得不寄人篱下，而丢失了兰州的青海马系内部也动荡不已，二马的间隙愈来愈深。"
 Hanhui_conflict:"难民冲突"
-Hanhui_conflict_desc:"二十年前的战争席卷了全国，给中原百姓带来了惨重的伤害。在战争末期日军疯狂的扫荡中，大量难民选择逃往西北——全中国为数不多尚未被战火彻底洗礼的土地。涌入的难民补充了西北稀缺的劳动力，挽救了青海之前因盘剥和战乱所导致的濒临崩溃的经济，与此同时，青海本来并不尖锐的民族矛盾因为难民的拥入而变得尖锐起来，但和传统认知不同，这种歧视主要是以本土少数民族和汉族，歧视外来人口为主。"
+Hanhui_conflict_desc:"二十年前的战争席卷了全国，给中原百姓带来了惨重的伤害。在战争末期日军疯狂的扫荡中，大量难民选择逃往西北——全中国为数不多尚未被战火彻底洗礼的土地。\n\n涌入的难民补充了西北稀缺的劳动力，挽救了青海之前因盘剥和战乱所导致的濒临崩溃的经济，与此同时，青海本来并不尖锐的民族矛盾因为难民的拥入而变得尖锐起来，但和传统认知不同，这种歧视主要是以本土少数民族和汉族，歧视外来人口为主。"
 An_economy_of_exhaustion_and_fishing:"竭泽而渔的经济"
-An_economy_of_exhaustion_and_fishing_desc:"中国的军阀历来都有着“优良”的发展经济的传统。在三十年代的四川，就有军阀把税收到了1991年。而青海马家发展经济的力度与四川军阀的发展经济力度类似。马家以十年为单位的不断扩张自己的家族产业，残酷的盘剥其治下的群众，不计后果的攫取利益导致了西北成千上万的小生产者的破产，而无止境的征兵则使得务农人口急剧减少。随着湟中事业有限公司的成立，意味着马家的垄断产业彻底形成，整个青海在马家的盘剥下陷入无尽的痛苦。隐藏在“西北繁荣”背后的，是马家鼓囊囊的腰包，还有青海濒临崩溃的经济。"
+An_economy_of_exhaustion_and_fishing_desc:"中国的军阀历来都有着“优良”的发展经济的传统。在三十年代的四川，就有军阀把税收到了1991年。而青海马家发展经济的力度与四川军阀的发展经济力度类似。\n\n马家以十年为单位的不断扩张自己的家族产业，残酷的盘剥其治下的群众，不计后果的攫取利益导致了西北成千上万的小生产者的破产，而无止境的征兵则使得务农人口急剧减少。\n\n随着湟中事业有限公司的成立，意味着马家的垄断产业彻底形成，整个青海在马家的盘剥下陷入无尽的痛苦。隐藏在“西北繁荣”背后的，是马家鼓囊囊的腰包，还有青海濒临崩溃的经济。"
 Xibei_jun:"西北军本部"
-Xibei_jun_desc:"在改组国民政府的西北剿匪失败后，西北马家一度以最后的中华民国正统自诩，并不断地威胁关内，为了维护共荣圈的压舱石的安全，顺便排挤一些主战的军官，西北方面军应运而生。\n当浩浩荡荡的剿匪部队杀入了中国西北的腹地，一时间犹如如无人之境，曾经对改组国民政府军队重拳出击的叛军游击队，连头都不敢冒。西北方面军一路杀向了甘肃，在兰州同马家军阀展开了大战，马家引以为傲的兰州碉堡群被西北方面军轻而易举的拔除，苟活的马家部队仓皇撤入西宁，帝国无敌的西北方面军将要继续向西宁开进，彻底终结中国西北的叛军势力......但噩耗已经传来，西北方面军太过深入敌后，一路上的补给被沿途的赤匪叛军袭击，即使是在改组国民政府境内，来自东京的物资补给经历过层层军阀的盘剥，也所剩无几。缺乏补给，枪械难以保障，人员难以补充。在反复的扫荡后，西北方面军实际控制的领土内，也没有额外的食物来源。而今的他们，已经成了被困在中国西北的一支孤军。可他们能撤退吗？不，不能，不仅仅是因为皇国陆军的尊严，更重要的是，为了西北方面军最高指挥的荣耀，他们一步也不能撤退。"
+Xibei_jun_desc:"在改组国民政府的西北剿匪失败后，西北马家一度以最后的中华民国正统自诩，并不断地威胁关内，为了维护共荣圈的压舱石的安全，顺便排挤一些主战的军官，西北方面军应运而生。\n\n当浩浩荡荡的剿匪部队杀入了中国西北的腹地，一时间犹如如无人之境，曾经对改组国民政府军队重拳出击的叛军游击队，连头都不敢冒。西北方面军一路杀向了甘肃，在兰州同马家军阀展开了大战，马家引以为傲的兰州碉堡群被西北方面军轻而易举的拔除，苟活的马家部队仓皇撤入西宁，帝国无敌的西北方面军将要继续向西宁开进，彻底终结中国西北的叛军势力……\n\n但噩耗已经传来，西北方面军太过深入敌后，一路上的补给被沿途的赤匪叛军袭击，即使是在改组国民政府境内，来自东京的物资补给经历过层层军阀的盘剥，也所剩无几。缺乏补给，枪械难以保障，人员难以补充。在反复的扫荡后，西北方面军实际控制的领土内，也没有额外的食物来源。而今的他们，已经成了被困在中国西北的一支孤军。\n\n可他们能撤退吗？不，不能，不仅仅是因为皇国陆军的尊严，更重要的是，为了西北方面军最高指挥的荣耀，他们一步也不能撤退。"
 Supply_lines_across_East_Asia:"漫长的补给线"
 Supply_lines_across_East_Asia_desc:"每天，一箱箱产自日本帝国的先进武器被装上渡轮，飘洋过海抵达中国。而后，它们便被装载到火车，卡车，甚至是畜力车之上，跨过东亚的广袤土地，历经漫长的运输，忍受着改组国民政府层层的盘剥，忍受着西北那些旧日幽灵的游击队的一次又一次袭击，来到西北战斗的最前线————这固然证明了大日本帝国影响力的举世无双，也带来了难以忽视的损耗。"
 Anti_Japanese_guerrilla_army:"西北抗日游击军"
-Anti_Japanese_guerrilla_army_desc:"占领兰州并不是剿匪事业的终点，这只不过是剿匪事业的一个重要的拦路石而已，即使的马家军阀已经撤入西宁，在兰州乃至其他西北方面军的占领区内，到处都是奔走的游击队，到处都是不服皇军的暴民。更令西北军此刻的形势雪上加霜的是，不仅仅是兰州各地涌现了本土的游击队，在陕西西北，那些旧日红色幽灵的游击队同样活跃了起来......游击队掠夺补给线以壮大游击队自身，他们的力量也在不断强大......"
-POLITICS_MA_JIYUAN_DESC:0"与中原膏腴之地相比，西北是一片严峻的土地。在群山之间，各民族交错杂居，形成了独特的社会面貌。半个世纪以来，在马家治下，这里虽谈不上富庶，却和平而安定。在西北王——马步芳的深谋远虑下，哪怕是如火如荼的抗日战争，也未能过多的波及这里。摆脱了战火的纷扰，再加上日本人的青睐，西北得以成为战后最早崛起的地区。一时间，马家日进斗金，兰州也被喻为塞上江南……但这都是日军进犯之前的事了。\n仅持续了数年，战争就将西北的面貌完全改变了，虚假的繁荣被扯得粉碎，潜藏着的矛盾急剧爆发。在兰州大败后，马继援失去了自己的父亲，马家失去了自己的主心骨，残军败退西宁，却军纪涣散，缺枪少弹。危机当前，马继援只得草草安葬了父亲，独自挑起西北王的重担。如今的西北，内外之敌待机环伺，民众惶惶不得终日，兄弟之间亦有嫌隙。但马家半个世纪积攒的财富不容小觑，彪悍的西北男儿也绝不会被轻易打倒。马继援的面前是一条荆棘密布的难行天路，而这个年轻人势要踏出一条坦道通途！\n如若不被逆境击垮，幼驹终将日行千里，震颤山河！"
+Anti_Japanese_guerrilla_army_desc:"占领兰州并不是剿匪事业的终点，这只不过是剿匪事业的一个重要的拦路石而已，即使的马家军阀已经撤入西宁，在兰州乃至其他西北方面军的占领区内，到处都是奔走的游击队，到处都是不服皇军的暴民。\n\n更令西北军此刻的形势雪上加霜的是，不仅仅是兰州各地涌现了本土的游击队，在陕西西北，那些旧日红色幽灵的游击队同样活跃了起来……游击队掠夺补给线以壮大游击队自身，他们的力量也在不断强大……"
+POLITICS_MA_JIYUAN_DESC:0"与中原膏腴之地相比，西北是一片严峻的土地。在群山之间，各民族交错杂居，形成了独特的社会面貌。半个世纪以来，在马家治下，这里虽谈不上富庶，却和平而安定。在西北王——马步芳的深谋远虑下，哪怕是如火如荼的抗日战争，也未能过多的波及这里。摆脱了战火的纷扰，再加上日本人的青睐，西北得以成为战后最早崛起的地区。一时间，马家日进斗金，兰州也被喻为塞上江南……但这都是日军进犯之前的事了。\n\n仅持续了数年，战争就将西北的面貌完全改变了，虚假的繁荣被扯得粉碎，潜藏着的矛盾急剧爆发。在兰州大败后，马继援失去了自己的父亲，马家失去了自己的主心骨，残军败退西宁，却军纪涣散，缺枪少弹。危机当前，马继援只得草草安葬了父亲，独自挑起西北王的重担。如今的西北，内外之敌待机环伺，民众惶惶不得终日，兄弟之间亦有嫌隙。但马家半个世纪积攒的财富不容小觑，彪悍的西北男儿也绝不会被轻易打倒。马继援的面前是一条荆棘密布的难行天路，而这个年轻人势要踏出一条坦道通途！\n\n如若不被逆境击垮，幼驹终将日行千里，震颤山河！"
 
 
 #test
 GAN.114514.t:"万象更新"
-GAN.114514.d:"一如往常，尼古拉今日也起了个大早，此时太阳还未升起，东方尚显鱼肚白。随后，他走向盥洗室，进行着那套他自小便学会的洗漱流程，似乎今日尼古拉的日常行程也将会和往常一样。待洗漱完毕后，他将那套已陪伴他二十多年的旧军装熨烫整齐，然后挂于衣柜之中——终于有一步打破常规了——但并未持续多久，这次打破常规便被尼古拉从衣柜里取出的一套新军服又带回了原点。\n这套军服昨日刚由勘察加水兵委员会下发到各水兵手上，今日尼古拉就已迫不及待地将它套在了自己的身上。尼古拉对着镜子里的自己看了又看，只见这套军服做工精细，蓝色袖口上镶嵌着金色纽扣，在灯光的照耀下闪闪夺目，金色纽扣上还刻着苏维埃国徽，尽显小巧玲珑之感；别于腰间的黑色皮质枪套衬托着脚上踏着的黑色长筒皮靴，帽沿的苏维埃国徽点缀，镜中之人此刻甚是威武雄壮。\n他满意地朝镜子敬了个礼，而后打开衣柜轻抚着那套已发旧起皱的陪伴自己二十多年的“老战友”，似是诉说着离别的低语。半晌，尼古拉关上柜门，再次将新军帽戴起，踏着皮靴走出了房间——他要穿着新军服去参加委员会的授勋仪式，一切都是崭新的，从军服到勋章，从尼古拉到水兵委员会，勘察加的一切在今日过后都将换上新颜，而士兵们身上的新军服不过是此刻万象更新中的一景。"
+GAN.114514.d:"一如往常，尼古拉今日也起了个大早，此时太阳还未升起，东方尚显鱼肚白。随后，他走向盥洗室，进行着那套他自小便学会的洗漱流程，似乎今日尼古拉的日常行程也将会和往常一样。待洗漱完毕后，他将那套已陪伴他二十多年的旧军装熨烫整齐，然后挂于衣柜之中——终于有一步打破常规了——但并未持续多久，这次打破常规便被尼古拉从衣柜里取出的一套新军服又带回了原点。\n\n这套军服昨日刚由勘察加水兵委员会下发到各水兵手上，今日尼古拉就已迫不及待地将它套在了自己的身上。尼古拉对着镜子里的自己看了又看，只见这套军服做工精细，蓝色袖口上镶嵌着金色纽扣，在灯光的照耀下闪闪夺目，金色纽扣上还刻着苏维埃国徽，尽显小巧玲珑之感；别于腰间的黑色皮质枪套衬托着脚上踏着的黑色长筒皮靴，帽沿的苏维埃国徽点缀，镜中之人此刻甚是威武雄壮。\n\n他满意地朝镜子敬了个礼，而后打开衣柜轻抚着那套已发旧起皱的陪伴自己二十多年的“老战友”，似是诉说着离别的低语。半晌，尼古拉关上柜门，再次将新军帽戴起，踏着皮靴走出了房间——他要穿着新军服去参加委员会的授勋仪式，一切都是崭新的，从军服到勋章，从尼古拉到水兵委员会，勘察加的一切在今日过后都将换上新颜，而士兵们身上的新军服不过是此刻万象更新中的一景。"
 GAN.114514.a:"“大浪淘沙新辞旧，苍天野旷旧换新。”"
 GAN.1919810.t:"授勋仪式"
-GAN.1919810.d:"彼得罗巴甫洛夫斯克市中心的礼堂此刻热闹非凡，高擎红旗的礼兵正伫立于台阶两侧，等待着参与授勋仪式的士兵与军官们的到来。不一会，水兵们身着崭新的军服，拾级而上，进入到礼堂的大门内，水兵委员会的领导同志早已在里面庄严肃穆地站立，等待着水兵们的到来。\n尼古拉很少有机会亲身体会这么大的仪式，他赞叹的大嘴此刻已说不出话。他早就给新军服预留了挂勋章的地方，想到这尼古拉又低下头看了一眼左侧胸口处，空空如也的口袋上方此时还是有点形单影只。但他毫不担心，他清楚地知道尤马舍夫将军马上就要亲手授予他勋章，甚至可能还会亲手为他挂在左侧胸口处——这无疑令尼古拉感到兴奋不已。\n尼古拉没有听清将军的演讲里说着什么，他只想着自己真切地带着荣誉的勋章，立于台上，身后高挂着苏维埃国徽。尼古拉丝毫没有怀疑自己的信仰，而此刻信仰的荣誉又体现在他左侧胸口处的几枚勋章中。\n毫无疑问水兵委员会的授勋仪式激发着尼古拉及一众水兵们向着伟大理想前进的步伐，不可否认的是，在这之后这群水兵们会愈加勇猛地向前进。"
+GAN.1919810.d:"彼得罗巴甫洛夫斯克市中心的礼堂此刻热闹非凡，高擎红旗的礼兵正伫立于台阶两侧，等待着参与授勋仪式的士兵与军官们的到来。不一会，水兵们身着崭新的军服，拾级而上，进入到礼堂的大门内，水兵委员会的领导同志早已在里面庄严肃穆地站立，等待着水兵们的到来。\n\n尼古拉很少有机会亲身体会这么大的仪式，他赞叹的大嘴此刻已说不出话。他早就给新军服预留了挂勋章的地方，想到这尼古拉又低下头看了一眼左侧胸口处，空空如也的口袋上方此时还是有点形单影只。但他毫不担心，他清楚地知道尤马舍夫将军马上就要亲手授予他勋章，甚至可能还会亲手为他挂在左侧胸口处——这无疑令尼古拉感到兴奋不已。\n\n尼古拉没有听清将军的演讲里说着什么，他只想着自己真切地带着荣誉的勋章，立于台上，身后高挂着苏维埃国徽。尼古拉丝毫没有怀疑自己的信仰，而此刻信仰的荣誉又体现在他左侧胸口处的几枚勋章中。\n毫无疑问水兵委员会的授勋仪式激发着尼古拉及一众水兵们向着伟大理想前进的步伐，不可否认的是，在这之后这群水兵们会愈加勇猛地向前进。"
 GAN.1919810.a:"“荣誉在身，九死亦无悔。”"
