if线国策效果
注：图标没装

--- a/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
@@ -67,7 +67,17 @@
   #cavalry_train:0 "马家军骑兵培育"
   #livestock:0 "马家军优质畜牧产品"
   #build_up_defense:0 "巩固苏区防务"
-
+#if线
+COX_Light_The_Fire: "将炉火烧的通红"
+COX_Anger_Boiling_Over: "满腔的怒火已经沸腾"
+COX_Base_Stability: "基层安定"
+COX_Beat_Wolves: "端起猎枪打豺狼"
+COX_Once_And_For_All: "毕其功于一役"
+COX_Save_And_Kill_Enemy: "保存自己，毙敌以虚"
+COX_Logistics_Support: "后勤保障"
+COX_Friendship_Of_Robe: "袍泽之谊"
+COX_Rise_Up: "起来，不愿做奴隶的人们！"
+unite_like_a_fortress: "众志成城"
 #魔怔内容及其介绍
   Touhou: "幻想世界入"
   INSANE: "你红军爷爷回来啦"
