添加西康有关内容

--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -35,9 +35,9 @@ QIN_NIQ_DEF:"西北行政公署"
 QIN_MJY: "西北国民军"
 QIN_MJY_ADJ:"西北国民军"
 QIN_MJY_DEF:"西北国民军"
-XIK_KIX: "西康军"
-XIK_KIX_ADJ:"西康军"
-XIK_KIX_DEF:"西康军"
+XIK_KIX: "西康省"
+XIK_KIX_ADJ:"西康省"
+XIK_KIX_DEF:"西康省"
 
 XIN: "新疆执政府"
 XIN_ADJ:"新疆执政府"
