--- a/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
@@ -646,7 +646,7 @@
  COX_news_event.5.d:0 "先是中国南部连续一周不断的雷暴天气，又是日本驻中国西北地区的武装拓荒团神秘失踪。中国地区开始出现了越来越多匪夷所思的怪事。然而日本帝国政府却在此时宣布“日本与日本在中国地区的盟友皆未发现任何异常。”\n\n然而同样有流言称，中国地区的大部分人在睡梦中不一而同地见到了一位长着痣的慈祥老者。尽管这种流言的真实性几乎为零，但该流言确实遍布于中国的几乎所有地区。因此，这引起了全球范围内奇幻爱好者的讨论。"
  COX_news_event.5.a:0 "有什么东西要来了？"
  COX_news_event.6.t:0 "[Get_newspaper_header]草原上的革命"
- COX_news_event.6.d:0 "本该在50年代的战争中销声匿迹的蒙古人民共和国，竟奇迹般的再度出现在了蒙古草原之上；据可靠消息称，这支部队主要是由前蒙古人民军和苏联红军的残部组成。\n\n外界不曾得知这支所谓的“蒙古人民阵线”起义军是从何而来，但唯一能确定的是，其极大可能由来自俄罗斯远东与中国西域的势力扶持——尽管后者听起来有些不可思议。\n\n东京的新闻发言人每天都在重复着相同的谴责措辞，却迟迟不见日军对蒙疆的实质性支援——在东亚的战事早已令旭日帝国焦头烂额，无暇顾及蒙疆政府。\n\n而随着新的一轮动荡再度席卷蒙古，这片古老的草原也许将再次迎来新的主人……"
+ COX_news_event.6.d:0 "东亚陷入紧张局势已有数月之久，从东京到柏林，外界都在屏息凝神，静待共荣圈的变故。近日，一则消息自蒙古高原而来，一支由前蒙古人民军和苏联红军的残部组成的游击队已经解放了草原西部，日本帝国疏于掌控的地区，并宣布“蒙古人民共和国”的复兴。据了解，“蒙古人民共和国”为前苏联在蒙古地区扶植的傀儡政权，在五十年代被共荣圈彻底瓦解。\n\n外界不曾得知这支所谓的“蒙古人民军”是从何而来，但唯一能确定的是，其极大可能由来自俄罗斯远东与中国的势力扶持，且持有坚定的反日反共荣圈思想。\n\n东京的新闻发言人每天都在重复着相同的谴责措辞，却迟迟不见日军对蒙疆的实质性支援——在东亚的战事早已令旭日帝国焦头烂额，无暇顾及蒙疆政府。\n\n而随着新的一轮动荡再度席卷蒙古，这片古老的草原也许将再次迎来新的主人……"
  COX_news_event.6.a:0 "跟随着苏赫巴托尔，在欢呼声中将敌人埋葬！"
 
 
