蒙古人物介绍、胜利点、新闻标题

--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -95,3 +95,4 @@ Construction_Corps:0 "建设兵团"
 
 TNO_newspaper_header_COX: "\n£newspaper_header_COX\n\n\n\n"
 TNO_newspaper_header_XBJ: "\n£newspaper_header_XBJ\n\n\n\n"
+TNO_newspaper_header_MEA: "\n£newspaper_header_MEA\n\n\n\n"
