--- a/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
@@ -204,3 +204,4 @@ MEN_zedengbaer:0 "尤睦佳·泽登巴尔"
 MEN_batedaoerji:0 "巴特·道尔吉"
 MEN_zhamiyang:0 "扎米扬·勒哈格瓦苏伦"
 MEN_gonggeer:0 "沙格达林·贡戈尔"
+MEA_wulanbatuo:0 "乌兰巴托"
