--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -71,3 +71,14 @@
 #马家军
   QIN_Ma_Bufang: "马步芳"
   POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚…无论用什么手段……"
+  
+ #蒙人阵
+  MEN_zedengbaer: "尤睦佳·泽登巴尔"
+  MEN_zedengbaer_desc: "在参加政治工作以前，泽登巴尔曾经是一名经济学者。他曾在苏联伊尔库茨克财经学院学习。回国后，他很快就成为了蒙古人民共和国的财政部副部长和中央委员。作为乔巴山的副手，泽登巴尔一直受到蒙古人民革命党和莫斯科的青睐，直到二战的开始。\n\n起初，没有人在意战争的爆发，毕竟强大的苏联总是战无不胜的。但是事情的发展超出了所有人的预料。随着苏联和中国的倒塌，蒙古不得不直接面对日本帝国。在混乱之中，泽登巴尔带领蒙古军民离开了乌兰巴托。在唐努图瓦，他们遇到了同样被轴心国赶到这里的华西列夫斯基，两点黑暗中的火星聚为了更大的火苗。\n\n从此蒙古人民阵线以唐努图瓦作为根据地，在西蒙继续反抗日本帝国主义与其走狗——德王。尽管有人革委支持，但泽登巴尔依旧认为共荣圈是不可战胜的。如今，十几年过去，泽登巴尔曾经的黑发已经变得花白，蒙古的未来也变得更加扑朔迷离。"
+  POLITICS_youmujiazedengbaer_DESC: "在参加政治工作以前，泽登巴尔曾经是一名经济学者。他曾在苏联伊尔库茨克财经学院学习。回国后，他很快就成为了蒙古人民共和国的财政部副部长和中央委员。作为乔巴山的副手，泽登巴尔一直受到蒙古人民革命党和莫斯科的青睐，直到二战的开始。\n\n起初，没有人在意战争的爆发，毕竟强大的苏联总是战无不胜的。但是事情的发展超出了所有人的预料。随着苏联和中国的倒塌，蒙古不得不直接面对日本帝国。在混乱之中，泽登巴尔带领蒙古军民离开了乌兰巴托。在唐努图瓦，他们遇到了同样被轴心国赶到这里的华西列夫斯基，两点黑暗中的火星聚为了更大的火苗。\n\n从此蒙古人民阵线以唐努图瓦作为根据地，在西蒙继续反抗日本帝国主义与其走狗——德王。尽管有人革委支持，但泽登巴尔依旧认为共荣圈是不可战胜的。如今，十几年过去，泽登巴尔曾经的黑发已经变得花白，蒙古的未来也变得更加扑朔迷离。"
+  MEN_batedaoerji: "巴特·道尔吉"
+  MEN_batedaoerji_for_desc: "巴特道尔吉原来是个牧民，后来在30年代成为了蒙古人民军的一员。他曾经以师长的身份，参加了自诺门罕战役以来的所有对日本帝国主义的战斗。他见证了蒙古人民共和国如何被消灭，以及，关东军是如何把旭日旗插到乌兰巴托的苏赫巴托广场上的。\n\n乌兰巴托失陷之后，蒙军开始大规模撤退。巴特道尔吉虽只是一名中级军官，但他成功掩护了主力蒙军的撤退。疯狂的日伪军让巴特道尔吉的士兵们损失惨重，但万幸的是人民军和政府的主干人员已被成功转移。这一战之后，巴特道尔吉进入了人革委开设的临时军事学院。\n\n如今，巴特道尔吉已经成为了人民军中年轻势力的代表，他已经等不及要向日本人和蒙古伪军报仇了。"
+  MEN_zhamiyang: "扎米扬·勒哈格瓦苏伦"
+  MEN_zhamiyang_desc: "扎米扬·勒哈格瓦苏伦于1912年出生于一个军官家庭，1932年，二十岁的勒哈格瓦苏伦应征入伍，随后被分配到第十五骑兵师。1935年，勒哈格瓦苏伦被选中参加优秀军官培养计划，随后他的晋升速度可以用“坐火箭”来形容。1939年7月，勒哈格瓦苏伦以第一苏蒙集团军的蒙古骑兵部分的指挥官的身份，参加了诺门罕战役，而他的顶头上司则是朱可夫。 \n\n在诺门罕战役中，勒哈格瓦苏伦首次见到了机械化骑兵集群的威力，并且暗暗下定决心，要为蒙古打造自己的机械化骑兵部队。但苏联和中国的战败，让勒哈格瓦苏伦不得不收起他的梦想，转而逃命。不过，如果有一天蒙古被解放，或许勒哈格瓦苏伦还有机会实现他的梦想。"
+  MEN_gonggeer: "沙格达里·贡戈尔"
+  MEN_gonggeer_desc: "沙戈达里·贡戈尔于1912年出生在一个牧民家庭，1927年，贡戈尔成为蒙古骑兵军的一名士兵，这支部队驻扎在蒙古人民共和国和伪满洲国的边境。1936年1月28日晚7点半，在哨所执勤的贡戈尔遭到了十几名日军骑兵的袭击，但是他没有退缩，而是单枪匹马与敌人鏖战了两个小时。因为这次英勇的战斗经历，贡戈尔在同月被授予“共和国英雄”的荣誉称号。贡戈尔在1939年以装甲旅旅长的身份参加了诺门罕战役。作为蒙军新锐的装甲力量，贡戈尔麾下的装甲旅被寄予厚望。\n\n和其他高级将领不同，贡戈尔并不留念军队和政治，反而向往着解甲归田的生活，毕竟，枪炮无法使蒙古富裕。他曾经计划好等战争结束后尽快复员，然而盟国与邻国的战败让他不得不推迟自己的计划——他将继续战斗下去，直至蒙古解放。"
