--- a/localisation/simp_chinese/LFB_states_lore_l_simp_chinese .yml
+++ b/localisation/simp_chinese/LFB_states_lore_l_simp_chinese .yml
@@ -4,6 +4,6 @@ state_lore_initials.362: "CHD"
 state_lore_name.362: "昌都"
 state_lore_desc.362: "如果说汉地的徐州是京沪的门户，那么康区的昌都就是拉萨的门户。昌都，藏语意为“水流汇合处”。 在昌都的辖区内，分布着四条大河和大大小小数不尽的湖泊。作为西藏康区的中心城市，它是渡过金沙江之后进入拉萨地区的必经之路，无论是大军还是商人都要先经过昌都才能到达拉萨，因此有治藏先安康的说法，历来是兵家必争之地。\n\n昌都的主要居民是康巴藏人，相比于卫藏地区（拉萨地区），康巴与汉地的关系更为深厚。然而这并不意味着昌都是个易攻难守之地，对于汉地的军队来说，这里的文化风俗、自然环境，都与汉地有天壤之别。昌都的藏军可以轻易凭借着有利的地形和坚壁清野阻拦数倍于己的敌军。而可怕的高原反应能让一个英勇的平原士兵在极短的时间内变成心脏病患者。\n\n藏人与敌人最近的一次作战是在1953年，一支溃退的国民革命军与驻守在昌都的藏军发生冲突。这支国民革命军在士气低落、装备缺少、指挥混乱的情况下，被藏军伏击，进而失败。自此，西康的汉人士兵再也不敢渡过金沙江。"
 
-state_lore_initials.363: "ULA"
-state_lore_name.363: "乌兰巴托"
-state_lore_desc.363: "在外蒙古，大型的城市寥寥无几，因此库伦在外蒙古的地位便格外重要。可以说，谁掌握了库伦，谁就掌握了外蒙古。\n\n乌兰巴托始建于1639年，是蒙古喀尔喀部活佛的驻地，一开始叫做“库伦”，意为“栅栏围起来的草场”。在此之后，这座城市的名字被变幻的政治形势左右：库伦、大库伦、京师库伦——直到蒙古人民共和国的建立，1921年，全蒙古大呼拉尔大会决定将京师库伦改名为乌兰巴托。从那之后，这座城市拥有了全新的意义——红色英雄城。在德王伙同日本人击败了蒙古人民军之后，他们再次将这座城市的名称改回了库伦。恍惚间，这里的一切似乎又回到了大清的时候。\n\n如今这座城市里，已经没有了活佛。但红色的英雄们，也许有一天还会回来。"
+state_lore_initials.363: "KüR"
+state_lore_name.363: "库伦"
+state_lore_desc.363: "在外蒙古，大型的城市寥寥无几，因此库伦在外蒙古的地位便格外重要。可以说，谁掌握了库伦，谁就掌握了外蒙古。\n\n库伦始建于1639年，是蒙古喀尔喀部活佛的驻地。它一开始叫做“库伦”，意为“栅栏围起来的草场”。在此之后，这座城市的名字就被变幻的政治形势所左右：库伦、大库伦、京师库伦——直到蒙古人民共和国的建立，1921年，全蒙古大呼拉尔大会决定将京师库伦改名为乌兰巴托。从那之后，这座城市拥有了全新的意义——红色英雄城。在德王伙同日本人击败了蒙古人民军之后，他们再次将这座城市的名称改回了库伦。恍惚间，这里的一切似乎又回到了大清的时候。\n\n如今这座城市里，已经没有了活佛。但红色的英雄们，也许有一天还会回来。"
