为后续根据拥有者改变库兰巴托介绍作准备

--- a/localisation/simp_chinese/LFB_states_lore_l_simp_chinese .yml
+++ b/localisation/simp_chinese/LFB_states_lore_l_simp_chinese .yml
@@ -10,4 +10,6 @@ state_lore_initials.363_MEN: "KüR"
 state_lore_name.363: "[Statelore_Get_wulanbatuo_name]"
 state_lore_name.363_MEA: "乌兰巴托"
 state_lore_name.363_MEN: "库伦"
-state_lore_desc.363: "在外蒙古，大型的城市寥寥无几，因此库伦在外蒙古的地位便格外重要。可以说，谁掌握了库伦，谁就掌握了外蒙古。\n\n乌兰巴托始建于1639年，是蒙古喀尔喀部活佛的驻地，一开始叫做“库伦”，意为“栅栏围起来的草场”。在此之后，这座城市的名字被变幻的政治形势左右：库伦、大库伦、京师库伦——直到蒙古人民共和国的建立，1921年，全蒙古大呼拉尔大会决定将京师库伦改名为乌兰巴托。从那之后，这座城市拥有了全新的意义——红色英雄城。在德王伙同日本人击败了蒙古人民军之后，他们再次将这座城市的名称改回了库伦。恍惚间，这里的一切似乎又回到了大清的时候。\n\n如今这座城市里，已经没有了活佛。但红色的英雄们，也许有一天还会回来。"
+state_lore_desc.363: "[Statelore_Get_wulanbatuo_desc]"
+state_lore_desc.363_MEA: "在外蒙古，大型的城市寥寥无几，因此库伦在外蒙古的地位便格外重要。可以说，谁掌握了库伦，谁就掌握了外蒙古。\n\n乌兰巴托始建于1639年，是蒙古喀尔喀部活佛的驻地，一开始叫做“库伦”，意为“栅栏围起来的草场”。在此之后，这座城市的名字被变幻的政治形势左右：库伦、大库伦、京师库伦——直到蒙古人民共和国的建立，1921年，全蒙古大呼拉尔大会决定将京师库伦改名为乌兰巴托。从那之后，这座城市拥有了全新的意义——红色英雄城。在德王伙同日本人击败了蒙古人民军之后，他们再次将这座城市的名称改回了库伦。恍惚间，这里的一切似乎又回到了大清的时候。\n\n如今这座城市里，已经没有了活佛。但红色的英雄们，也许有一天还会回来。"
+state_lore_desc.363_MEN: "在外蒙古，大型的城市寥寥无几，因此库伦在外蒙古的地位便格外重要。可以说，谁掌握了库伦，谁就掌握了外蒙古。\n\n乌兰巴托始建于1639年，是蒙古喀尔喀部活佛的驻地，一开始叫做“库伦”，意为“栅栏围起来的草场”。在此之后，这座城市的名字被变幻的政治形势左右：库伦、大库伦、京师库伦——直到蒙古人民共和国的建立，1921年，全蒙古大呼拉尔大会决定将京师库伦改名为乌兰巴托。从那之后，这座城市拥有了全新的意义——红色英雄城。在德王伙同日本人击败了蒙古人民军之后，他们再次将这座城市的名称改回了库伦。恍惚间，这里的一切似乎又回到了大清的时候。\n\n如今这座城市里，已经没有了活佛。但红色的英雄们，也许有一天还会回来。"
