适配，op.2 刚刚忘了stage了，更改见上一条:(

--- a/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
@@ -54,7 +54,7 @@
  MEN_mongol_autonomous_federation_ultranationalism_ADJ:0 "蒙古"
  MEN_mongol_autonomous_federation_national_socialism_ADJ:0 "蒙古"
  MEN_despotism_party:0 "蒙疆善后委员会"
- MEN_demchugdongrub:0 "德穆楚克栋鲁普"
+ MEN_Demchugdongrub:0 "德穆楚克栋鲁普"
  MEN_Li_Shouxin:0 "李守信"
  MEN_tao_ketao:0 "陶克陶"
  MEN_degulai:0 "德古来"
