--- a/localisation/simp_chinese/eroeffnung.yml
+++ b/localisation/simp_chinese/eroeffnung.yml
@@ -1,5 +1,5 @@
 l_simp_chinese:
 
- BRY_CountryInfo_Folder.103: "背景介绍"		###一级标题###
- BRY_CountryInfo_Content.5: "背景介绍"		###二级标题###	
- BRY_CountryInfo_Content_desc.5: "该写什么呢"		###内容###
+ COX_CountryInfo_Folder.103: "背景介绍"		###一级标题###
+ COX_CountryInfo_Content.5: "背景介绍"		###二级标题###	
+ COX_CountryInfo_Content_desc.5: "该写什么呢"		###内容###
