--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -8,8 +8,8 @@ COX_sik_DEF: "新疆苏维埃边区"
 COX_xib: "西北抗日民主政府"
 COX_xib_ADJ: "西北抗日民主政府"
 COX_xib_DEF: "西北抗日民主政府"
-COX_communist_party: "中国共产党 - 新疆局"
-COX_communist_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
+COX_communist_party: "中国共产党 - 八十八旅支部"
+COX_communist_party_long: "中国共产党 - 八十八旅支部"
 COX_communist_3_party: "中国共产党 - 新疆局"
 COX_communist_3_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
 COX_socialist_party: "新疆保卫和平民主同盟"
