杂七杂八的修改：     重写了GAN（西北军）相关事件链，现在相关事件应该更稳定触发且西北军的人均     GDP不再比肩广东。         ！！ZZZ_economy_definition在以后兼容时需要重点关注！！
    GAN现在拥有火星装备，能维持满黄条的状态

    初步实装了if线西部暴动，用自定义的事件链覆盖了TNO本体内容。

--- a/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_other_countries_events_l_simp_chinese.yml
@@ -131,6 +131,7 @@ Supply_lines_across_East_Asia:"漫长的补给线"
 Supply_lines_across_East_Asia_desc:"每天，一箱箱产自日本帝国的先进武器被装上渡轮，飘洋过海抵达中国。而后，它们便被装载到火车，卡车，甚至是畜力车之上，跨过东亚的广袤土地，历经漫长的运输，忍受着改组国民政府层层的盘剥，忍受着西北那些旧日幽灵的游击队的一次又一次袭击，来到西北战斗的最前线————这固然证明了大日本帝国影响力的举世无双，也带来了难以忽视的损耗。"
 Anti_Japanese_guerrilla_army:"西北抗日游击军"
 Anti_Japanese_guerrilla_army_desc:"占领兰州并不是剿匪事业的终点，这只不过是剿匪事业的一个重要的拦路石而已，即使的马家军阀已经撤入西宁，在兰州乃至其他西北方面军的占领区内，到处都是奔走的游击队，到处都是不服皇军的暴民。\n\n更令西北军此刻的形势雪上加霜的是，不仅仅是兰州各地涌现了本土的游击队，在陕西西北，那些旧日红色幽灵的游击队同样活跃了起来……游击队掠夺补给线以壮大游击队自身，他们的力量也在不断强大……"
+GAN_template_lock_tt:"§R无法训练、解放单位，无法编辑单位模板。§!"
 POLITICS_MA_JIYUAN_DESC:0"与中原膏腴之地相比，西北是一片严峻的土地。在群山之间，各民族交错杂居，形成了独特的社会面貌。半个世纪以来，在马家治下，这里虽谈不上富庶，却和平而安定。在西北王——马步芳的深谋远虑下，哪怕是如火如荼的抗日战争，也未能过多的波及这里。摆脱了战火的纷扰，再加上日本人的青睐，西北得以成为战后最早崛起的地区。一时间，马家日进斗金，兰州也被喻为塞上江南……但这都是日军进犯之前的事了。\n\n仅持续了数年，战争就将西北的面貌完全改变了，虚假的繁荣被扯得粉碎，潜藏着的矛盾急剧爆发。在兰州大败后，马继援失去了自己的父亲，马家失去了自己的主心骨，残军败退西宁，却军纪涣散，缺枪少弹。危机当前，马继援只得草草安葬了父亲，独自挑起西北王的重担。如今的西北，内外之敌待机环伺，民众惶惶不得终日，兄弟之间亦有嫌隙。但马家半个世纪积攒的财富不容小觑，彪悍的西北男儿也绝不会被轻易打倒。马继援的面前是一条荆棘密布的难行天路，而这个年轻人势要踏出一条坦道通途！\n\n如若不被逆境击垮，幼驹终将日行千里，震颤山河！"
 
 
@@ -138,6 +139,12 @@ POLITICS_MA_JIYUAN_DESC:0"与中原膏腴之地相比，西北是一片严峻的
 GAN.114514.t:"万象更新"
 GAN.114514.d:"一如往常，尼古拉今日也起了个大早，此时太阳还未升起，东方尚显鱼肚白。随后，他走向盥洗室，进行着那套他自小便学会的洗漱流程，似乎今日尼古拉的日常行程也将会和往常一样。待洗漱完毕后，他将那套已陪伴他二十多年的旧军装熨烫整齐，然后挂于衣柜之中——终于有一步打破常规了——但并未持续多久，这次打破常规便被尼古拉从衣柜里取出的一套新军服又带回了原点。\n\n这套军服昨日刚由勘察加水兵委员会下发到各水兵手上，今日尼古拉就已迫不及待地将它套在了自己的身上。尼古拉对着镜子里的自己看了又看，只见这套军服做工精细，蓝色袖口上镶嵌着金色纽扣，在灯光的照耀下闪闪夺目，金色纽扣上还刻着苏维埃国徽，尽显小巧玲珑之感；别于腰间的黑色皮质枪套衬托着脚上踏着的黑色长筒皮靴，帽沿的苏维埃国徽点缀，镜中之人此刻甚是威武雄壮。\n\n他满意地朝镜子敬了个礼，而后打开衣柜轻抚着那套已发旧起皱的陪伴自己二十多年的“老战友”，似是诉说着离别的低语。半晌，尼古拉关上柜门，再次将新军帽戴起，踏着皮靴走出了房间——他要穿着新军服去参加委员会的授勋仪式，一切都是崭新的，从军服到勋章，从尼古拉到水兵委员会，勘察加的一切在今日过后都将换上新颜，而士兵们身上的新军服不过是此刻万象更新中的一景。"
 GAN.114514.a:"“大浪淘沙新辞旧，苍天野旷旧换新。”"
-GAN.1919810.t:"授勋仪式"
+GAN.1919810.t:"授勋仪式"S
 GAN.1919810.d:"彼得罗巴甫洛夫斯克市中心的礼堂此刻热闹非凡，高擎红旗的礼兵正伫立于台阶两侧，等待着参与授勋仪式的士兵与军官们的到来。不一会，水兵们身着崭新的军服，拾级而上，进入到礼堂的大门内，水兵委员会的领导同志早已在里面庄严肃穆地站立，等待着水兵们的到来。\n\n尼古拉很少有机会亲身体会这么大的仪式，他赞叹的大嘴此刻已说不出话。他早就给新军服预留了挂勋章的地方，想到这尼古拉又低下头看了一眼左侧胸口处，空空如也的口袋上方此时还是有点形单影只。但他毫不担心，他清楚地知道尤马舍夫将军马上就要亲手授予他勋章，甚至可能还会亲手为他挂在左侧胸口处——这无疑令尼古拉感到兴奋不已。\n\n尼古拉没有听清将军的演讲里说着什么，他只想着自己真切地带着荣誉的勋章，立于台上，身后高挂着苏维埃国徽。尼古拉丝毫没有怀疑自己的信仰，而此刻信仰的荣誉又体现在他左侧胸口处的几枚勋章中。\n毫无疑问水兵委员会的授勋仪式激发着尼古拉及一众水兵们向着伟大理想前进的步伐，不可否认的是，在这之后这群水兵们会愈加勇猛地向前进。"
 GAN.1919810.a:"“荣誉在身，九死亦无悔。”"
+
+#西北军入侵倒计时
+QIN_invasion:0 "西北军入侵"
+QIN_invasion_desc:0 ""
+QIN_GAN_invasion_countdown:0 "INVASION"
+QIN_GAN_invasion_countdown_desc:0 "觉得眼熟？这样的事情正在东亚各处发生，你就可能是下一个。"
