初步实装了全部的IF线兰州内容 缺乏本地化

--- a/localisation/simp_chinese/COX_liberation_of_Lanzhou_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_liberation_of_Lanzhou_GUI_l_simp_chinese.yml
@@ -1,3 +1,3 @@
 ﻿l_simp_chinese:
- COX_Liberation_of_Lanzhou_progressbar_1: "当前渗透进度为[?Lanzhou_permeate_index|B%%0]"
+ COX_Liberation_of_Lanzhou_progressbar_1: "当前渗透进度为[?Lanzhou_infiltration_index|B%%0]"
  COX_Liberation_of_Lanzhou_progressbar_2: "当前整合进度为[?Lanzhou_integration_index|R%%0]，每周会自然增长2%"
