--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -169,17 +169,24 @@
   debug_COX_load_focus_tree_northwest_period_first_five_year_plan:0 "加载§G一五计划§!国策树"
   Open_the_Gate_of_Steiner:0 "命运石之门"
   Red_Army_comes_as_a_lightning:0 "红军归来"
+  debug_GAN_invasion:0 "让西北军立刻发动进攻"
+  debug_GAN_invasion_desc:0 "正常情况下西北军会在开局280天后打过来，但你不愿意在反复的调试中浪费这点看海的时间。"
   debug_Sun_Set:0 "落日"
-debug_COX_Qinghai_burn:0 "西北爆爆爆"
-XBJ_QIN_fucking:0 "妈的，和马继援干了！"
-debug_COX_xinjiang_back:0 "我很生气，叫红军滚"
-debug_COX_Qinghai_Crisis:0 "我青海危机呢？"
-debug_COX_attack_XIN:0 "能不能鞭尸盛世才？"
-debug_COX_land_reform:0 "我们会摧毁无数个旧世界！"
-debug_COX_land_reform_succeeded_and_then_build:0 "我们也擅长于建立无数个新世界！"
-debug_COX_COX_Occupy_Nanjing:0 "高宗武，你还能说话吗？"
-COX_Occupy_Nanjing:0 "高宗武已死"
-debug_COX_shanxi_attack:0 "赶紧把西北军图了吧"
+  debug_COX_Qinghai_burn:0 "西北爆爆爆"
+  XBJ_QIN_fucking:0 "妈的，和马继援干了！"
+  debug_COX_xinjiang_back:0 "我很生气，叫红军滚"
+  debug_COX_Qinghai_Crisis:0 "我青海危机呢？"
+  debug_COX_attack_XIN:0 "能不能鞭尸盛世才？"
+  debug_COX_land_reform:0 "我们会摧毁无数个旧世界！"
+  debug_COX_land_reform_succeeded_and_then_build:0 "我们也擅长于建立无数个新世界！"
+  debug_IF_YUN_start:0 "让上位者夺舍龙云，他会在神兵天降攻入长沙之后又在华南遭遇西班牙坏天气，这一切都是为了能让玩家有哪怕一丝的游戏体验。"
+  debug_IF_YUN_start_desc:0 "这会开启我们的IF线：龙云大概会在四个月后发动进攻。"
+  debug_GAN_invasion_required_tt:0 "西北军已经入侵了兰州"
+  debug_IF_WI_start:0"让龙云立刻攻打高宗武，因为你等不及。"
+  debug_IF_WI_start:0_desc"直接开启西部暴动。大概要过两三个月你这边才有反应，但我实在懒得想该怎么用一个决议把这期间的进展做出来了，所以就这样吧。顺带一提这样的话龙云多半会有bug"
+  debug_COX_COX_Occupy_Nanjing:0 "高宗武，你还能说话吗？"
+  COX_Occupy_Nanjing:0 "高宗武已死"
+  debug_COX_shanxi_attack:0 "赶紧把西北军图了吧"
 
  #目前被暂时移除的决议
   #Kazakh_cavalry_training:0 "使用哈萨克骑兵训练方法"
@@ -237,27 +244,6 @@ debug_COX_shanxi_attack:0 "赶紧把西北军图了吧"
  XBJ_northwest_crisis_invaded_Jap_los:0 "§Y进攻受挫§!"
 
  #解放兰州
- COX_Liberation_of_Lanzhou:0 "解放兰州"
- COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进南京的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
- COX_Liberation_of_Lanzhou_invaded_Jap:0 "进攻倒计时"
- COX_relation_army_old_ma:0 "联络马家残部"
- COX_relation_army_old_ma_tt:0 "这将增加我们对于西北军的渗透！"
- COX_help_army_anti:0 "援助游击队"
- COX_help_army_anti_tt:0 "这将大幅增加我们对于西北军的渗透！"
- COX_SEE_army:0 "前出侦察"
- COX_SEE_army_tt:0 "这将小幅增加我们对于西北军的渗透！"
- COX_Anti_sweep:0 "反扫荡战术"
- COX_Anti_sweep_tt:0 "这将极大增加我们对于西北军的渗透！"
- COX_XIN_QIN_ROAD:0 "整修新青公路"
- COX_XIN_QIN_ROAD_tt:0 "这将大幅增加我们对两地区的整合！"
- COX_XIN_QIN_RIL:0 "修建西宁-乌鲁木齐铁路"
- COX_XIN_QIN_RIL_tt:0 "这将大幅增加我们对两地区的整合！"
- COX_Reorganize_army:0 "整编军队"
- COX_Reorganize_army_tt:0 "这将增加我们对两地区的整合！"
- COX_Grassroots_autonomy:0 "基层自治"
- COX_Grassroots_autonomy_tt:0 "这将增加我们对两地区的整合！"
- COX_Hidden_factory:0 "隐蔽工厂"
- COX_Hidden_factory_tt:0 "这将增加我们对两地区的整合！"
 
  #陕西争夺
  COX_Liberate_Shaanxi:0 "陕西争夺"
