--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -39,4 +39,72 @@
   RULE_OPTION_LONG_YUN_WETDREAM_DISABLED:0"默认"
   RULE_OPTION_LONG_YUN_WETDREAM_DISABLED_DESC:0"龙云将会被南京政府击败，西北将会继续蛰伏，静待时机。"
   RULE_OPTION_LONG_YUN_WETDREAM_ENABLED:0"§R燃气来了！§"
-  RULE_OPTION_LONG_YUN_WETDREAM_ENABLED_DESC:0"龙云将能够攻入武汉，并与南京方面陷入僵持。这对西北的革命者们或许是个§Y机会§......"
+  RULE_OPTION_LONG_YUN_WETDREAM_ENABLED_DESC:0"龙云将能够攻入湖南，并与南京方面陷入僵持。这对西北的革命者们或许是个§Y机会§......"
+
+  #新闻事件
+  COX_news_event.7.t:0"[Get_newspaper_header]湖南战役"
+  COX_news_event.7.d:0"当龙云在西南扛起反抗共荣圈的大旗，世界各地的评论家大多将此视为"狂人的妄想"。出乎所有人意料的是，在各地人民的热诚支持下，护国军得以夺取重庆，并在近日直逼湖南-湖北一线。而利用南京政府的颓势，日军以“维和”的名义开进华北，在事实上占领了该地区。\n\n但中国解放的希望仍然渺茫。在推进到了当前战线后，护国军的攻势便由于兵力劣势和补给不畅阻滞不前，而进驻的日军则阻止着他们向北推进。目前，双方在华南一带的漫长战线上维持着僵持；但倘若局势不变，龙云的失败将会是板上钉钉。"
+  COX_news_event.7.a:0"中国还要遭多少难？"
+  COX_news_event.7.b:0"召集同志们，我们要赶快行动！"
+
+  #IF线甘肃
+  COX_the_peasants_tt:0"农民们将会进一步参与到我们对兰州地区的渗透和重建中！"
+  COX_the_workers_tt:0"工人们们将会进一步参与到我们对兰州地区的渗透和重建中！"
+  COX_the_fighters_tt:0"我们将会针对兰州进行进一步的军事准备！"
+  COX_GAN_war_started_tt:0"我们已经开始了对兰州的入侵"
+  COX_GAN_war_ended_tt:0"我们对兰州的入侵已经结束"
+  ##需要填充
+  LFB_COX_nc.1.t:0"进攻兰州"
+  LFB_COX_nc.1.d:0""
+  LFB_COX_nc.1.a:0""
+  COX_GAN_war_start_tt:0"§Y60天§!内，如果我们能够及时攻占天水，便能彻底切断西北军的后路，将其一网打尽！"
+  LFB_COX_nc.2.t:0"进攻兰州胜利"
+  LFB_COX_nc.2.d:0""
+  LFB_COX_nc.2.a:0""
+  COX_GAN_war_win_tt:0"西北军被§G全数歼灭§!，通往陕西的大门已经大开！\n\n由于我们之前的渗透，兰州的整合将§G增加§!至[?Lanzhou_integrtion_index]。"
+  LFB_COX_nc.3.t:0"进攻兰州失败"
+  LFB_COX_nc.3.d:0""
+  LFB_COX_nc.3.a:0""
+  COX_GAN_war_lose_tt:0"尽管我们竭尽全力，但西北军仍然得以§R全身而退§!。\n\n在西北军撤退时，他们对当地实施了惨绝人寰的焦土政策，这将使我们的整合进度§R倒退§!20点。"
+  ##已经完成的事件
+  LFB_COX_nc.4.t:0"疯狗之死"
+  LFB_COX_nc.4.d:0"£gezifu £gezifu 事情是怎么到这个地步的？整个西北方面军不知道，辻政信也不知道，几个月前，他还是这几十万平方公里土地的唯一主宰。转眼间，兰州和天水接连被攻克，整支西北方面军都被红军彻底包围。\n\n£gezifu £gezifu 等等？红军？\n\n£gezifu £gezifu 但是辻政信没时间想这些，他在中国军队彻底包围指挥部之前找到了一匹快马，头也不回地逃离了。\n\n£gezifu £gezifu “等到我回到东京，我一定要说服军部再给我一支军队，然后再次回到西北！ 再杀一遍！”\n\n£gezifu £gezifu 长途的骑行和滴水未进使得这个六十二岁的老人逐渐体力不支，他的精神逐渐模糊，他的四肢慢慢无力。\n\n£gezifu £gezifu “难道上天真的要亡我于此？”\n\n£gezifu £gezifu 终于，他本能地将马匹的速度降了下来，然后竭尽全力让自己坐在马上。\n\n£gezifu £gezifu “呼，呼，我只需要…休息一会…”\n\n£gezifu £gezifu 他再次醒来时，发现自己的床边围着全村的人，所有人都盯着他，辻政信见过这种眼神，在菲律宾，一个濒死的美国战俘曾经这样看着他\n\n£gezifu £gezifu 辻政信故作镇定地从床上爬起，然后慢慢向村子外面走去，人群中自动让出一条道路。\n\n£gezifu £gezifu 他走出了屋子，一开始是走着的，然后慢慢变成跑步，最后几乎是竭尽全力地跑。\n\n£gezifu £gezifu 土枪，菜刀，锄头，剪刀，都跟在后面。\n\n£gezifu £gezifu 好像是天注定的，辻政信被一块石头绊倒，他很快地翻过身来，恐惧地看着一张张如黄土般的面庞，这些人中，他一个也不认识，但是他们认识他。\n\n£gezifu £gezifu “したくない！ したくない！ 助けて！”（不！不！救救我啊！）"
+  LFB_COX_nc.4.a:0"大快人心事！"
+  COX_tsuji_masanobu_death_tt:0"人面兽心的怪物终于迎来了自己的结局：不是在战场上壮烈牺牲，而是被自己所蔑视的，蝼蚁一般的人们踩在脚下。"
+  LFB_COX_nc.5.t:0"功亏一篑"
+  LFB_COX_nc.5.d:0"£gezifu £gezifu 辻政信此时端坐在机舱内，天皇御赐的菊花纹军刀立在双腿之中，他面容肃穆，戴着白手套的两只手交叉摁住刀柄。坐在身旁的则是他的军官团。飞机在跑道上滑行，缓缓起飞，目标沧州。虽然他并未在兰州为帝国带来大胜，但天皇已经发下谕旨——鉴于此刻帝国正遭到外敌威胁，需要每一位忠心耿耿的士兵奋起而战。辻政信可以免于切腹，西北军也被慷慨地赠予了一次将功补过的机会……\n\n£gezifu £gezifu 念及天皇的慈悲，辻政信不禁长出了口气。或许大陆再次兴起的战端已经彻底挽救了大日本帝国，令国体为之一振，天皇殿下必然已将朝中奸佞扫除。自己接下来的工作，便是再次尽到军人的本分，为帝国戍守华北。对于此事，辻政信显得胸有成竹——远征军的战士们个个都是身经百战的精英，心怀崇高的信仰。而经过数天的激战，他本人也对共党常用的渗透与伏击战术有所了解……\n\n£gezifu £gezifu 没了补给短缺，与情报的劣势，帝国经营数十年的华北地区，正是他再度崛起的绝佳舞台……"
+  LFB_COX_nc.5.a:0"为山九仞,功亏一篑。"
+  COX_GAN_extraction_tt:0"西北军的精锐部队将会在华北§R重组§!！"
+  ##决议
+  COX_Liberation_of_Lanzhou:0 "解放兰州"
+  COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进南京的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
+  COX_Liberation_of_Lanzhou_countdown:0 "机不可失..." 
+  COX_Liberation_of_Lanzhou_countdown_desc:0 "护国军在西南的战术胜利打乱了日军的阵脚，驻扎兰州的西北方面军开始紧急调动。这产生了一个稍纵即逝的机会，我们必须尽快做好准备，发动进攻。" 
+  COX_Liberation_of_Lanzhou_invaded_Jap:0 "...时不再来"
+  COX_Liberation_of_Lanzhou_invaded_Jap_desc:0 "就在红军开进兰州的同时，西北军也在执行着他们的撤退计划。如果我们未能在一定时间内将他们切断，就会彻底失去这一歼灭敌军一大主力的机会。"
+  COX_relation_army_old_ma:0 "联络马家残部"
+  COX_relation_army_old_ma_tt:0 "这将降低我们在西北军渗透的衰减。"
+  COX_help_army_anti:0 "援助游击队"
+  COX_help_army_anti_tt:0 "这将降低我们在西北军渗透的衰减。！"
+  COX_Anti_sweep:0 "反扫荡战术"
+  COX_Anti_sweep_tt:0 "这将降低我们在西北军渗透的衰减。"
+  COX_SEE_army:0 "前出侦察"
+  COX_SEE_army_tt:0 "这将小幅增加我们对于西北军的渗透！"
+  COX_XIN_QIN_ROAD:0 "整修新青公路"
+  COX_XIN_QIN_ROAD_tt:0 "这将大幅增加我们对两地区的整合！"
+  COX_XIN_QIN_RIL:0 "修建西宁-乌鲁木齐铁路"
+  COX_XIN_QIN_RIL_tt:0 "这将大幅增加我们对两地区的整合！"
+  COX_assassinate_officers:0"刺杀日军军官"
+  COX_assassinate_officers_tt:0"这将有效打击日军的士气，但如此激进的行动会降低我方渗透"
+  COX_Reorganize_army:0 "整编军队"
+  COX_Reorganize_army_tt:0 "这将增加我们对两地区的整合！"
+  COX_mobilize_peasants:0"动员乡村群众"
+  COX_mobilize_peasants_tt:0"兰州的父老乡亲们会来投奔我们，但这样的明显的行动将会降低我方渗透"
+  COX_Grassroots_autonomy:0 "基层自治"
+  COX_Grassroots_autonomy_tt:0 "这将增加我们对两地区的整合！"
+  COX_Hidden_factory:0 "隐蔽工厂"
+  COX_Hidden_factory_tt:0 "我们将会获得额外的生产单位，但这样的工业调动将会降低我方渗透"
+  COX_rebuild_Lanzhou_industry:0"重建兰州工业"
+  COX_rebuild_Lanzhou_industry_tt:0"这将增加我们对两地区的整合！"
+
+  
