TNO_menu_tooltips_l_simp_chinese.yml

--- a/localisation/simp_chinese/replace/TNO_menu_tooltips_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_menu_tooltips_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  TNO_ugly_american_icon_tt: "§R《光自贝加尔湖来》 0.25版本——阋墙御侮§!"
  TNO_ugly_american_icon_tt_delayed: "兄弟者，分形连气之人也。\n兄弟阋墙，外御其侮，出自§Y《诗经·小雅·棠棣》§!，用来比喻内部的争斗。然而即使内斗再激烈，兄弟也会团结在同一面旗帜下，共同抵御外敌。左传记载，周代穆公待宗族不公，周公的后代引用此诗，讲出兄弟之间必须要团结的道理。\n\n纵使六十年代西北的§x共产党§!和西南的§q护国§!§e军§!有着巨大的意识形态差异，但面对共同的敌人——§J日本帝国主义§!面前，他们还是选择了暂时和解，建立了第三次统一战线。\n正所谓脊令在原，兄弟急难。每有良朋，况也永叹。兄弟阋于墙，外御其侮。每有良朋，烝也无戎。丧乱既平，既安且宁。\n有的危险，即使是最好的朋友，也会袖手旁观；而兄弟，则会出手相助。"
- TNO_menupic_tooltip_1: "§F§B万里长城§!万里长，长城外面是§Y故乡§!，高粱肥、大豆香，遍地§O黄金§!少§R灾殃§!§!"
- TNO_menupic_tooltip_2: "§F自从§R大难§!平地起，§R奸淫掳掠§!苦难当，§R骨肉离散§!父母丧，§R国仇家恨§!永难忘§!"
- TNO_menupic_tooltip_3: "§F大家拼命打回去，哪怕倭寇逞豪强。万万§Y同胞§!心一条，国家兴亡§O人人当§!§!"
+ TNO_menupic_tooltip_1: "§i民气轩昂弯岸直§!§W，国风浩荡海波平。§!"
+ TNO_menupic_tooltip_2: "§W吁嗟乎，§!§V九牛一毫莫自夸，§!§i骄傲自满必翻车。§!"
+ TNO_menupic_tooltip_3: "§x人民怒撼山河动，背水奇功敌尽降。§!"
