-修复了数个 有关兰州解放的bug -早期工业建设现在会赋予玩家更多的生产单位而非GDP

--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -139,7 +139,7 @@
   COX_eid_COX_eid_machine_tool_decrease:0 "工业机床§R减少§!"
   COX_eid_worker_proficiency_increase_greatly:0 "工人熟练度§G大幅增加§!"
   COX_eid_gui_effect_text:0 "[Get_COX_eid_gui_effect_text]"
-  COX_eid_gui_effect_text1:0 "创造§G[?COX_eid_machine_tool_effect_display]§!M的GDP"
+  COX_eid_gui_effect_text1:0 "得到§G[?COX_eid_machine_tool_effect_display]§!个生产单位"
   COX_eid_gui_effect_text2:0 "得到§G[?COX_eid_machine_tool_effect_display]§!单位电力"
   COX_eid_gui_text:0 "我们目前的机床拥有量为§G[?COX_eid_machine_tool]§!\n我们目前的工人熟练度为§G[?COX_eid_worker_proficiency|%]§!"
   COX_eid_gui_Region_button_text:0 "消耗§R[?COX_eid_machine_tool_display]§!单位机床"
