--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -12,10 +12,202 @@ COX_huabei_dongbei_state_10: "§Y华北南部§!"
 COX_huabei_dongbei_state_11: "§Y大连港口§!"
 COX_huabei_dongbei_state_12: "§Y威海卫港§!"
 COX_huabei_dongbei_state_13: "§Y青岛港口§!"
-
-dongbei_hunluandu_V1: "§Y+[?huabei_dongbei_hunluan_V1]§!"
+COX_dongbeifangananniu_TONGYONG: "§Y通用决议§!"
+huabei_zhuleijieduan1: "筑垒"
+COX_HUABEI_TESHU_6: "§Y已建立华北革命根据地§!"
+LFB_COX_huabei_add_hunluandu:0 "局势变化"
+dongbei_youshidengji_A_1: "§Y等级1§!"
+dongbei_youshidengji_A_2: "§Y等级2§!"
+dongbei_youshidengji_A_3: "§Y等级3§!"
+dongbei_youshidengji_A_4: "§Y等级4§!"
+dongbei_youshidengji_B_1: "§Y等级1§!"
+dongbei_youshidengji_B_2: "§Y等级2§!"
+dongbei_youshidengji_B_3: "§Y等级3§!"
+dongbei_youshidengji_B_4: "§Y等级4§!"
+dongbei_youshidengjijiangji_A_1: "§Y等级0§!"
+dongbei_youshidengjijiangji_A_2: "§Y等级1§!"
+dongbei_youshidengjijiangji_A_3: "§Y等级2§!"
+dongbei_youshidengjijiangji_A_4: "§Y等级3§!"
+dongbei_youshidengjijiangji_A_5: "§Y等级4§!"
+dongbei_youshidengjijiangji_B_1: "§Y等级0§!"
+dongbei_youshidengjijiangji_B_2: "§Y等级1§!"
+dongbei_youshidengjijiangji_B_3: "§Y等级2§!"
+dongbei_youshidengjijiangji_B_4: "§Y等级3§!"
+dongbei_youshidengjijiangji_B_5: "§Y等级4§!"
+COX_YOUSHIDU_35: "§Y我们在华北地区拥有至少35%的优势§!"
+COX_HUABEI_LENQUEJINDU_revanniu_1: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_2: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_3: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_4: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_5: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_6: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_7: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_8: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_9: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_10: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_11: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_12: "正在解放地区"
+COX_HUABEI_LENQUEJINDU_revanniu_13: "正在解放地区"
+TNO_LFB_huabei_dec: "华北攻势"
+TNO_LFB_huabei_dec_desc:0 " "
+COX_HUABEI_LENQUEJINDU_1:0 "议案冷却期"
+COX_HUABEI_LENQUEJINDU_2:0 "议案冷却期"
+COX_HUABEI_LENQUEJINDU_3:0 "议案冷却期"
+COX_HUABEI_LENQUEJINDU_4:0 "特殊议案冷却期"
+COX_huabei_dongbeifangananniu_button_yiwancheng:0 "§Y已经完成该议案§!"
+LFB_COX_huabei_NCC_fangxian:0 "华北战备升级"
+LFB_COX_huabei_MAN_fangxian:0 "满洲战备升级"
 dongbei_hunluandu_V2: "§Y+[?huabei_dongbei_hunluan_V2]§!"
 dongbei_hunluandu_V3: "§Y+[?huabei_dongbei_hunluan_V3]§!"
+dongbei_youshidengjishuzhi_A_1: "§Y[?huabei_state_21_youshi_index]%§!"
+dongbei_youshidengjishuzhi_A_2: "§Y[?huabei_state_22_youshi_index]%§!"
+dongbei_youshidengjishuzhi_A_3: "§Y[?huabei_state_23_youshi_index]%§!"
+dongbei_youshidengjishuzhi_A_4: "§Y[?huabei_state_24_youshi_index]%§!"
+dongbei_youshidengjishuzhi_B_1: "§Y[?huabei_state_31_youshi_index]%§!"
+dongbei_youshidengjishuzhi_B_2: "§Y[?huabei_state_32_youshi_index]%§!"
+dongbei_youshidengjishuzhi_B_3: "§Y[?huabei_state_33_youshi_index]%§!"
+dongbei_youshidengjishuzhi_B_4: "§Y[?huabei_state_34_youshi_index]%§!"
+COX_dongbeifangananniu_jueze: "§Y特殊决议§!"
+COX_HUABEI_LENGQUE: "§Y正在执行一项议案§!"
+COX_special_1: "与华北抗日武装接触"
+COX_special_2: "团结一切抗日力量"
+COX_special_3: "团结革命进步武装"
+COX_special_4: "吸纳劳动党成员"
+COX_special_5: "兄弟党的协助"
+COX_special_6: "建立华北革命根据地"
+COX_special_7: "华北根据地:边战斗边生产"
+COX_special_8: "煽动工人不满"
+COX_special_9: "秘密运输武器"
+COX_special_10: "阻挠撤侨行动"
+COX_special_11: "破坏高层转移"
+COX_special_12: "组织工人巡查队"
+COX_huabei_huabei_rev1_juece: "特殊行动"
+
+COX_huabei_huabei_special_1: "解放山西"
+COX_huabei_huabei_special_2: "南下河洛"
+COX_huabei_huabei_special_3: "河南门户"
+COX_huabei_huabei_special_4: "进抵长江"
+COX_huabei_huabei_special_5: "中原战役"
+COX_huabei_huabei_special_6: "平津易帜"
+COX_huabei_huabei_special_7: "进抵山海关"
+COX_huabei_huabei_special_8: "山东门户"
+COX_huabei_huabei_special_9: "解放山东"
+COX_huabei_huabei_special_10: "辽沈战役"
+COX_huabei_huabei_special_11: "辽东战役"
+COX_huabei_huabei_special_12: "控制兴安岭"
+COX_huabei_huabei_special_13: "解放满洲"
+
+COX_daily_1: "渗透突袭"
+COX_daily_1_desc: "议案预期效果:获得民族精神“端起猎枪打豺狼”§G+20%§!突破,持续§Y30日§!"
+COX_daily_2: "为革命而生产！"
+COX_daily_21_desc: "议案预期效果:§G+5%§!工厂产出"
+COX_daily_22_desc: "议案预期效果:§G+10%§!工厂产出,每日政治点数消耗§R+0.2§!"
+COX_daily_23_desc: "议案预期效果:§G+10%§!工厂产出,§G+10%§!生产效率保持,每日政治点数消耗§R+0.2§!,每周稳定度§R-0.2%§!"
+COX_daily_3: "解析敌寇"
+COX_daily_31_desc: "议案预期效果:对敌人§G+5%攻击＆防御§!,每日政治点数消耗§R+0.2§!,每日指挥点数增长§R-0.1§!"
+COX_daily_32_desc: "议案预期效果:对敌人§G+10%攻击＆防御§!,每日政治点数消耗§R+0.2§!,每日指挥点数增长§R-0.1§!"
+COX_daily_33_desc: "议案预期效果:对敌人§G+15%攻击＆防御§!,每日政治点数消耗§R+0.2§!,每日指挥点数增长§R-0.1§!"
+COX_daily_4: "为了民族解放！"
+COX_daily_4_desc: "议案预期效果:人力§G+20000§!,稳定度§G+5%§!,战争支持度§G+5%§!"
+COX_daily_5: "收编抗日义勇军"
+COX_daily_51_desc: "议案预期效果:每周人力§G+500§!"
+COX_daily_52_desc: "议案预期效果:每周人力§G+1000§!,地区混乱度增长§Y+0.5§!"
+COX_daily_53_desc: "议案预期效果:每周人力§G+2000§!,地区混乱度增长§Y+1.0§!"
+COX_daily_6: "平均土地"
+COX_daily_61_desc: "议案预期效果:政治点数获取§G+0.2§!"
+COX_daily_62_desc: "议案预期效果:政治点数获取§G+0.5§!,每周稳定度§G+0.2%§!,地区混乱度增长§Y+0.5§!"
+COX_daily_63_desc: "议案预期效果:政治点数获取§G+0.8§!,每周稳定度§G+0.5%§!,地区混乱度增长§Y+1.0§!"
+COX_daily_7: "恢复生产"
+COX_daily_7_desc: "议案预期效果:§Y-15§!混乱度"
+COX_daily_8: "没收汉奸资本"
+COX_daily_8_desc: "议案预期效果:§G+2生产单位,+1.5m的流动准备金§!"
+COX_LOSHIDU_A: "议案预期落实度"
+COX_LOSHIDU_B: "该议案不需要落实度"
+
+
+
+
+
+
+
+
+COX_huabei_dongbeiteshujueyiananniu1_button_tt: "§G将日军筑垒提升所需时间从90日提升至100日§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_20]"
+COX_huabei_dongbeiteshujueyiananniu2_button_tt: "§G降低日军筑垒等级三级\n将日军筑垒提升所需时间提升20日§!\n§R混乱度增速+1§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_40]"
+COX_huabei_dongbeiteshujueyiananniu3_button_tt: "§G降低日军筑垒等级两级\n将日军筑垒提升所需时间提升10日§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_40]"
+COX_huabei_dongbeiteshujueyiananniu4_button_tt: "获得民族精神§Y“中共华北支部”§!，§Y效果为§!§G+5%突破§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_60]"
+COX_huabei_dongbeiteshujueyiananniu5_button_tt: "获得民族精神§Y“中华劳动党”§!，§Y效果为§!§G+5%突破\n+5%组织度恢复§!\n§R混乱度增速+0.5§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_60]"
+COX_huabei_dongbeiteshujueyiananniu6_button_tt: "§G降低日军筑垒等级一级,且日军的筑垒等级将不再增长§!\n-------\n[Is_teshujueyilengqueqi_completed]"
+COX_huabei_dongbeiteshujueyiananniu7_button_tt: "§G降低20%的动乱度§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu_80]"
+COX_huabei_dongbeiteshujueyiananniu8_button_tt: "§R动乱度增加12§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu1_50]"
+COX_huabei_dongbeiteshujueyiananniu9_button_tt: "§R混乱度增速+3§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_buqiang_manzu_5000][Is_hunluandu_manzu1_50]"
+COX_huabei_dongbeiteshujueyiananniu10_button_tt: "§G将“满洲决死方位圈”的增速从120日调整至150日§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu1_50_80]"
+COX_huabei_dongbeiteshujueyiananniu11_button_tt: "§G将“满洲决死方位圈”的民族精神降低一级§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_hunluandu_manzu1_50_80]"
+COX_huabei_dongbeiteshujueyiananniu12_button_tt: "§G降低30%的动乱度§!\n-------\n[Is_teshujueyilengqueqi_completed][Is_cp_manzu_20][Is_buqiang_manzu_10000][Is_hunluandu_manzu1_80]"
+COX_huabei_dongbeifangananniu11_button_tt: "§G我们将会在一段时间内提升战斗力§!\n-------\n[Is_jueyilengqueqi_completed][Is_cp_manzu_20][Is_COX_Learn_From_War_completed]"
+COX_huabei_dongbeifangananniu12_button_tt: "§G我们将会提升我们的生产能力§!\n-------\n[Is_jueyilengqueqi_completed][Is_pp_manzu_20][Is_COX_Maintain_Wartime_Production_Order_completed]"
+COX_huabei_dongbeifangananniu13_button_tt: "§G我们将会在民族解放战争中获得更大优势§!\n-------\n[Is_jueyilengqueqi_completed][Is_pp_manzu_20][Is_COX_Experience_Of_National_Protection_Army_completed]"
+COX_huabei_dongbeifangananniu14_button_tt: "§G我们将会提升我们的稳定度和战争支持度并获得一批志愿者§!\n-------\n[Is_jueyilengqueqi_completed][Is_COX_Ancient_Country_But_New_Life_completed]"
+COX_huabei_dongbeifangananniu15_button_tt: "§G将会有更多人加入我们的事业§!,§R而代价是更加混乱的华北§!\n-------\n[Is_jueyilengqueqi_completed][Is_youshidu_manzu_35]"
+COX_huabei_dongbeifangananniu16_button_tt: "§G我们将会稳定我们的政权并获得更多的政治点数§!,§R而代价是更加混乱的华北§!\n-------\n[Is_jueyilengqueqi_completed][Is_youshidu_manzu_35]"
+COX_huabei_dongbeifangananniu17_button_tt: "§G我们将会在华北恢复一定的秩序§!\n-------\n[Is_jueyilengqueqi_completed][Is_buqiang_manzu_10000][Is_pp_manzu_50][Is_youshidu_manzu_35]"
+COX_huabei_dongbeifangananniu18_button_tt: "§G我们将会得到更多的资金§!,§R而代价是更加混乱的华北§!\n-------\n[Is_jueyilengqueqi_completed][Is_pp_manzu_100][Is_youshidu_manzu_35]"
+Is_COX_Learn_From_War_completed_no:0 "£trigger_no §Y完成国策：在战争中学习§! \n"
+Is_COX_Maintain_Wartime_Production_Order_completed_no:0 "£trigger_no §Y完成国策：维护战时生产秩序§! \n"
+Is_COX_Experience_Of_National_Protection_Army_completed_no:0 "£trigger_no §Y完成国策：他们的经验 §!\n"
+Is_COX_Ancient_Country_But_New_Life_completed_no:0 "£trigger_no §Y完成国策：古国新生§! \n"
+Is_youshidu_manzu_35_no:0 "£trigger_no §Y我们在华北地区拥有至少35%的优势§! \n"
+Is_pp_manzu_100_no:0 "£trigger_no §Y至少拥有100政治点数§! \n"
+Is_pp_manzu_50_no:0 "£trigger_no §Y至少拥有50政治点数§! \n"
+Is_pp_manzu_75_no:0 "£trigger_no §Y至少拥有75政治点数§! \n"
+Is_pp_manzu_25_no:0 "£trigger_no §Y至少拥有25政治点数§! \n"
+Is_pp_manzu_20_no:0 "£trigger_no §Y至少拥有20政治点数§! \n"
+Is_cp_manzu_20_no:0 "£trigger_no §Y至少拥有20指挥点数§! \n"
+Is_cp_manzu_15_no:0 "£trigger_no §Y至少拥有15指挥点数§! \n"
+Is_cp_manzu_30_no:0 "£trigger_no §Y至少拥有30指挥点数§! \n"
+Is_jueyilengqueqi_completed_no:0 "£trigger_no §Y没有处于议案冷却期§! \n"
+Is_teshujueyilengqueqi_completed_no:0 "£trigger_no §Y没有处于特殊议案冷却期§! \n"
+Is_buqiang_manzu_10000_no:0 "£trigger_no §Y至少拥有10000步兵装备§! \n"
+Is_buqiang_manzu_1000_no:0 "£trigger_no §Y至少拥有1000步兵装备§! \n"
+Is_buqiang_manzu_5000_no:0 "£trigger_no §Y至少拥有5000步兵装备§! \n"
+Is_hunluandu_manzu_20_no:0 "£trigger_no §Y华北地区的混乱度至少20%§! \n"
+Is_hunluandu_manzu_40_no:0 "£trigger_no §Y华北地区的混乱度至少40%§! \n"
+Is_hunluandu_manzu_60_no:0 "£trigger_no §Y华北地区的混乱度至少60%§! \n"
+Is_hunluandu_manzu_80_no:0 "£trigger_no §Y华北地区的混乱度至少80%§! \n"
+Is_hunluandu_manzu1_50_80_no:0 "£trigger_no §Y满洲地区的混乱度范围在50~80%§! \n"
+Is_hunluandu_manzu1_80_no:0 "£trigger_no §Y满洲地区的混乱度至少80%§! \n"
+Is_hunluandu_manzu1_50_no:0 "£trigger_no §Y满洲地区的混乱度不高于50%§! \n"
+Is_manpower_manzu_1000_no:0 "£trigger_no §Y至少拥有1000人力§! \n"
+Is_manpower_manzu_2000_no:0 "£trigger_no §Y至少拥有2000人力§! \n"
+Is_manpower_manzu_3000_no:0 "£trigger_no §Y至少拥有3000人力§! \n"
+Is_kongzhi_manzu_shanxi_no:0 "£trigger_no §Y控制山西§! \n"
+Is_kongzhi_manzu_yuxi_no:0 "£trigger_no §Y控制豫西与郑州§! \n"
+Is_kongzhi_manzu_yudong_no:0 "£trigger_no §Y控制南阳与开封§! \n"
+Is_kongzhi_manzu_jianghuai_no:0 "£trigger_no §Y控制徐州与合肥§! \n"
+Is_kongzhi_manzu_shimen_no:0 "£trigger_no §Y控制石门§! \n"
+Is_kongzhi_manzu_baobei_no:0 "£trigger_no §Y控制保定与北京§! \n"
+Is_kongzhi_manzu_tangshan_no:0 "£trigger_no §Y控制唐山§! \n"
+Is_kongzhi_manzu_jinan_no:0 "£trigger_no §Y控制济南§! \n"
+Is_kongzhi_manzu_shandong_no:0 "£trigger_no §Y控制山东剩余部分§! \n"
+Is_kongzhi_manzu_liaoshen_no:0 "£trigger_no §Y控制热河与锦州§! \n"
+Is_kongzhi_manzu_liaodong_no:0 "£trigger_no §Y控制奉天,安东与大连§! \n"
+Is_kongzhi_manzu_anxing_no:0 "£trigger_no §Y控制兴安西,兴安南,兴安北与兴安东§! \n"
+Is_kongzhi_manzu_waiman_no:0 "£trigger_no §Y控制新京,吉林,哈尔滨,滨江,间岛,龙江与三江§! \n"
+
+COX_huabei_huabei_revanniu1_button_tt: "§G获得§!§Y整个山西的核心§!\n§Y华北优势度§!§G+15%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_shanxi]"
+COX_huabei_huabei_revanniu2_button_tt: "§G获得§!§Y整个豫西的核心§!\n§Y华北优势度§!§G+5%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_yuxi]"
+COX_huabei_huabei_revanniu3_button_tt: "§G获得§!§Y南阳与开封的核心§!\n§Y华北优势度§!§G+10%§!\n-------\n[Is_pp_manzu_50][Is_manpower_manzu_2000][Is_buqiang_manzu_200][Is_cp_manzu_30][Is_kongzhi_manzu_yudong]"
+COX_huabei_huabei_revanniu4_button_tt: "§G获得§!§Y徐州与合肥的核心§!\n§Y华北优势度§!§G+10%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_jianghuai]"
+COX_huabei_huabei_revanniu5_button_tt: "§G获得§!§Y石门的核心§!\n§Y华北优势度§!§G+5%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_shimen]"
+COX_huabei_huabei_revanniu6_button_tt: "§G获得§!§Y保定与北京的核心§!\n§Y华北优势度§!§G+20%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_baobei]"
+COX_huabei_huabei_revanniu7_button_tt: "§G获得§!§Y唐山的核心§!\n§Y华北优势度§!§G+5%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_tangshan]"
+COX_huabei_huabei_revanniu8_button_tt: "§G获得§!§Y济南的核心§!\n§Y华北优势度§!§G+15%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_jinan]"
+COX_huabei_huabei_revanniu9_button_tt: "§G获得§!§Y山东剩余部分的核心§!\n§Y华北优势度§!§G+15%§!\n-------\n[Is_pp_manzu_50][Is_manpower_manzu_2000][Is_buqiang_manzu_200][Is_cp_manzu_30][Is_kongzhi_manzu_shandong]"
+COX_huabei_huabei_revanniu10_button_tt: "§G获得§!§Y热河与锦州的核心§!\n§Y满洲优势度§!§G+10%§!\n-------\n[Is_pp_manzu_25][Is_manpower_manzu_1000][Is_buqiang_manzu_100][Is_cp_manzu_15][Is_kongzhi_manzu_liaoshen]"
+COX_huabei_huabei_revanniu11_button_tt: "§G获得§!§Y奉天,安东与大连的核心§!\n§Y满洲优势度§!§G+30%§!\n-------\n[Is_pp_manzu_50][Is_manpower_manzu_2000][Is_buqiang_manzu_200][Is_cp_manzu_30][Is_kongzhi_manzu_liaodong]"
+COX_huabei_huabei_revanniu12_button_tt: "§G获得§!§Y兴安西,兴安南,兴安北与兴安东的核心§!\n§Y满洲优势度§!§G+10%§!\n-------\n[Is_pp_manzu_50][Is_manpower_manzu_2000][Is_buqiang_manzu_200][Is_cp_manzu_30][Is_kongzhi_manzu_anxing]"
+COX_huabei_huabei_revanniu13_button_tt: "§G获得§!§Y满洲剩余部分的核心§!\n§Y满洲优势度§!§G+50%§!\n-------\n[Is_pp_manzu_75][Is_manpower_manzu_3000][Is_buqiang_manzu_300][Is_cp_manzu_30][Is_kongzhi_manzu_waiman]"
+
+
 
 COX_huabei_dongbei_state1_1: "蒙疆西部"
 COX_huabei_dongbei_state2_2: "蒙疆中部"
@@ -46,6 +238,10 @@ COX_huabei_dongbei_hunluandu_12: "[?huabei_state_12_hunluan_index]"
 COX_huabei_dongbei_hunluandu_13: "[?huabei_state_13_hunluan_index]"
 
 
+COX_huabei_zhengzhou: "§Y郑州§!"
+COX_huabei_peking: "§Y北京§!"
+COX_huabei_jinan: "§Y济南§!"
+COX_huabei_taiyuan: "§Y太原§!"
 
 COX_huabei_dongbei_stateSJ_1: "§Y当地人口:\n204.16K\n当地生产总值:\n[?state_GDP_contribution_B|2]§!"
 COX_huabei_dongbei_stateSJ_2: "蒙疆中部"
@@ -60,3 +256,38 @@ COX_huabei_dongbei_stateSJ_10: "当地人口:\n§Y56.04M§!\n当地生产总值:
 COX_huabei_dongbei_stateSJ_11: "大连港口"
 COX_huabei_dongbei_stateSJ_12: "威海卫港"
 COX_huabei_dongbei_stateSJ_13: "青岛港口"
+
+
+
+  NCC_baolei_1: "华北防线：瓦解冰泮"
+  NCC_baolei_2: "华北防线：绺裂"
+  NCC_baolei_3: "华北防线：结寨连营"
+  NCC_baolei_4: "华北防线：驻防城区"
+  NCC_baolei_5: "华北防线：清扫乡村"
+  NCC_baolei_6: "华北防线：坚壁清野"
+  NCC_baolei_7: "华北防线：深壁固垒"
+  NCC_baolei_8: "华北防线：完成"
+
+  COX_idea_huabei_1: "端起猎枪打豺狼"
+  COX_idea_huabei_2: "为革命而生产！"
+  COX_idea_huabei_3: "为革命而生产！"
+  COX_idea_huabei_4: "为革命而生产！"
+  COX_idea_huabei_5: "解析敌寇"
+  COX_idea_huabei_6: "解析敌寇"
+  COX_idea_huabei_7: "解析敌寇"
+  COX_idea_huabei_8: "收编抗日义勇军"
+  COX_idea_huabei_9: "收编抗日义勇军"
+  COX_idea_huabei_10: "收编抗日义勇军"
+  COX_idea_huabei_11: "平均土地"
+  COX_idea_huabei_12: "平均土地"
+  COX_idea_huabei_13: "平均土地"
+  COX_idea_huabei_14: "没收汉奸资本"
+COX_idea_huabei_15: "中共华北支部"
+COX_idea_huabei_16: "兄弟党的协助"
+
+  MAN_baolei_1: "满洲守备：玉碎"
+  MAN_baolei_1_desc:0 "我们在华北的努力最终还是付诸东流，我们不得不在满洲进行最后一战！在这帝国的心脏，我们宁为玉碎，寸土必争！"
+  MAN_baolei_2: "满洲守备：奋迅"
+  MAN_baolei_2_desc:0 "最黑暗的时刻到来了，为了不让千万万帝国志士们的血白流，我们必须不惜一切代价，誓死捍卫满洲！"
+  MAN_baolei_3: "满洲守备：瓦全"
+  MAN_baolei_3_desc:0 "随着核武器的就绪，尽管山河破碎，新秩序已然乱亡，帝国终是转危为安。"
