--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -55,6 +55,9 @@ XBJ: "中共西北局"
 XBJ_ADJ: "中共西北局"
 XBJ_DEF: "中共西北局"
 XBJ_communist_party: "中国共产党 - 西北局"
+XBJ_communist_party_long: "中国共产党 - 西北局"
+XBJ_socialist_party: "中国共产党 - 西北局"
+XBJ_socialist_party_long: "中国共产党 - 西北局"
 XBJ_despotism_party: "宁系马家"
 XBJ_liberal_conservatism_party: "国民党行政公署"
 XBJ_liberalism_party: "国民党知识分子"
@@ -92,6 +95,7 @@ XPC_communist_party_long: "中国共产党 - 新疆局"
 XPC_ultranationalism_party: "维吾尔兄弟会"
 XPC_ultranationalism_party_long: "维吾尔兄弟会"
 Construction_Corps:0 "建设兵团"
+pup_difangju:0 "地方局"
 
 TNO_newspaper_header_COX: "\n£newspaper_header_COX\n\n\n\n"
 TNO_newspaper_header_XBJ: "\n£newspaper_header_XBJ\n\n\n\n"
