--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -183,7 +183,7 @@
   debug_IF_YUN_start_desc:0 "这会开启我们的IF线：龙云大概会在四个月后发动进攻。"
   debug_GAN_invasion_required_tt:0 "西北军已经入侵了兰州"
   debug_IF_WI_start:0"让龙云立刻攻打高宗武，因为你等不及。"
-  debug_IF_WI_start:0_desc"直接开启西部暴动。大概要过两三个月你这边才有反应，但我实在懒得想该怎么用一个决议把这期间的进展做出来了，所以就这样吧。顺带一提这样的话龙云多半会有bug"
+  debug_IF_WI_start_desc:0"直接开启西部暴动。大概要过两三个月你这边才有反应，但我实在懒得想该怎么用一个决议把这期间的进展做出来了，所以就这样吧。顺带一提这样的话龙云多半会有bug"
   debug_COX_COX_Occupy_Nanjing:0 "高宗武，你还能说话吗？"
   COX_Occupy_Nanjing:0 "高宗武已死"
   debug_COX_shanxi_attack:0 "赶紧把西北军图了吧"
