--- a/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
@@ -1,6 +1,7 @@
 ﻿l_simp_chinese:
  STATE_441: "克什米尔"
  STATE_601: "玉树"
+ STATE_607: "豫西"
  STATE_616: "银川"
  STATE_617: "迪化"
  STATE_619: "喀什"
@@ -12,6 +13,7 @@
  STATE_957: "哈密"
  STATE_958: "巴音郭楞"
  STATE_618: "昌吉地区"
+ STATE_1020: "鲁西"
  STATE_1466: "苦盏"
  STATE_1961: "南阿克赛钦"
 
@@ -44,3 +46,6 @@
  STATE_2039: "哈特隆"
  STATE_2040: "伊犁河谷西南段"
  STATE_2041: "帕米尔高原"
+ STATE_2042: "太原"
+ STATE_2043: "郑州"
+ STATE_2044: "济南"
