--- a/localisation/english/replace/COX_state_names_l_english.yml
+++ b/localisation/english/replace/COX_state_names_l_english.yml
@@ -1,13 +1,20 @@
-﻿l_english:
-STATE_441: "Kashmir"
+﻿l_english:STATE_441: "Kashmir"
 STATE_601: "Yushu"
+STATE_607: "Western Henan"
 STATE_616: "Yinchuan"
 STATE_617: "Dihua"
 STATE_619: "Kashgar"
+STATE_585: "Navoi"
+STATE_586: "Fergana"
+STATE_732: "Issyk-Kul"
+STATE_742: "Bukhara Nabad"
+STATE_750: "Central Karakalpak"
 STATE_957: "Hami"
-STATE_958: "Bayinguoleng"
+STATE_958: "Bayingolin"
 STATE_618: "Changji Region"
-STATE_1961: "Aksai Chin"
+STATE_1020: "Western Shandong"
+STATE_1466: "Khujand"
+STATE_1961: "Southern Aksai Chin"
 
 #86-94
 #16-24
@@ -20,6 +27,24 @@ STATE_2020: "Tacheng"
 STATE_2021: "Turpan"
 STATE_2022: "Kizilsu"
 STATE_2023: "Hotan"
-STATE_2024: "Taklimakan"
+STATE_2024: "Taklamakan"
 STATE_2025: "Hexi"
-STATE_2026: "West Section of Ili River Valley"
+STATE_2026: "Northwestern Ili River Valley"
+STATE_2027: "Frunze"
+STATE_2028: "Jalalabad"
+STATE_2029: "Osh"
+STATE_2030: "Batken"
+STATE_2031: "Syr Darya"
+STATE_2032: "Sogd"
+STATE_2033: "Surkhan Darya"
+STATE_2034: "Western Karakalpak"
+STATE_2035: "Bukhara"
+STATE_2036: "Khwarezm"
+STATE_2037: "Northern Karakalpak"
+STATE_2038: "Southern Karakalpak"
+STATE_2039: "Khatlon"
+STATE_2040: "Southwestern Ili River Valley"
+STATE_2041: "Pamir Plateau"
+STATE_2042: "Taiyuan"
+STATE_2043: "Zhengzhou"
+STATE_2044: "Jinan"
