--- a/localisation/english/replace/LFB_replace_l_english.yml
+++ b/localisation/english/replace/LFB_replace_l_english.yml
@@ -1,3 +1,8 @@
 ﻿l_english:
-tno_current_version:0 "TNO: Light from Lake Baikal v0.2 Desert Lone Smoke"
-tno_current_version_date:0 "2023/8/31 TNO-Light from Lake Baikal v0.2 Desert Lone Smoke"
+#It is recommended to include the update date every time an internal test package is updated
+#tno_current_version: "TNO-Light from Lake Baikal v0.11 The Wanderer Returns"
+#tno_current_version_date: "2023/3/22 TNO-Light from Lake Baikal v0.11 The Wanderer Returns"
+#tno_current_version:0 "The New Order: Light from Lake Baikal v0.2 The Lone Smoke in the Desert"
+#tno_current_version_date:0 "2023/8/31 TNO-Light from Lake Baikal v0.2 The Lone Smoke in the Desert"
+tno_current_version:0 "The New Order: Light from Lake Baikal v0.25 Internal Conflict, External Threat"
+tno_current_version_date:0 "2024/2/27 (Testing) TNO-Light from Lake Baikal v0.25 Internal Conflict, External Threat"
