--- a/localisation/english/COX_huabei_attack_GUI_l_english.yml
+++ b/localisation/english/COX_huabei_attack_GUI_l_english.yml
@@ -279,3 +279,19 @@ MAN_baolei_2: "Manchurian Defense: Swift Action"
 MAN_baolei_2_desc:0 "The darkest hour has arrived, and we must defend Manchuria at all costs, ensuring the blood of countless imperial patriots is not spilled in vain!"
 MAN_baolei_3: "Manchurian Defense: Saving the Nation"
 MAN_baolei_3_desc:0 "With nuclear weapons ready, despite the shattered mountains and chaotic new order, the empire has ultimately turned the tide." 
+
+
+DMN: "West Manchurian Autonomous Republic"
+DMN_ADJ: "West Manchurian Autonomous Republic"
+DMN_DEF: "West Manchurian Autonomous Republic"
+DMN_paternalism_party: "Manchurian Reconstruction Committee"
+DMN_paternalism_party_long: "Manchurian Reconstruction Committee"
+DMN_fascism_party: "Remnants of Manchukuo Institutions"
+DMN_fascism_party_long: "Remnants of Manchukuo Institutions"
+DMN_communist_party: "Communist Party of China - Northeast Bureau"
+DMN_communist_party_long: "Communist Party of China - Northeast Bureau"
+tengtianmao: "Fujita Shigeru"
+pujie1: "Aisin Gioro Pujie"
+pujie2: "Aisin Gioro Pujie"
+COX_idea_huabei_17: "Scatter Like Birds and Beasts"
+COX_idea_huabei_18: "Shadows of the Past"
